--- a/Go/Documentación/1.Sintaxis&Variables.md
+++ b/Go/Documentación/1.Sintaxis&Variables.md
@@ -295,26 +295,26 @@ Argumento 1: argumento1
 
 ## 1.8. Comandos Básicos Go
 
-- `go run:` Compila y ejecuta el programa.
-- `go build:` Compila el código fuente y genera un binario.
-- `./miPrograma:` Ejecuta el binario generado por go build.
-- `go install:` Compila y guarda el binario en el directorio de instalación de Go.
-- `go fmt:` Formatea el código según el estilo oficial.
-- `go vet:` Realiza un análisis estático en busca de errores comunes.
-- `go test:` Ejecuta pruebas unitarias.
-- `go mod:` Administra dependencias y módulos en Go.
-- `go mod tidy:` Limpia el archivo go.mod eliminando dependencias no usadas y agregando las necesarias.
-- `go clean:` Limpia archivos de compilación y caché.
-- `go doc:` Muestra la documentación de los paquetes y funciones.
-- `go get:` Descarga, instala y actualiza paquetes desde repositorios remotos.
-- `go tool pprof:` Genera perfiles de rendimiento para identificar cuellos de botella en tu código.
-- `go tool trace:` Genera registros de ejecución detallados para analizar la ejecución de tu programa.
-- `godoc:` Un servidor web para explorar la documentación de los paquetes de Go.
-- `go work:` Administra múltiples módulos en un solo directorio de trabajo.
-- `go env:` Muestra las variables de entorno de Go.
-- `go version:` Muestra la versión del compilador de Go.
-- `go list:` Lista los paquetes instalados.
-- `go mod vendor:` Copia las dependencias a un directorio vendor en tu proyecto, lo que puede ayudar con la gestión de dependencias en entornos de construcción controlados.
-- `go install ./...:` Instala todos los paquetes en el directorio actual y subdirectorios.
-- `go run ./...:` Ejecuta todos los paquetes en el directorio actual y subdirectorios.
-- `go debug (para Go 1.20+):` Permite interactuar con un depurador para la ejecución del programa en un entorno de desarrollo.
+- `go run`: Compila y ejecuta el programa.
+- `go build`: Compila el código fuente y genera un binario.
+- `./miPrograma`: Ejecuta el binario generado por go build.
+- `go install`: Compila y guarda el binario en el directorio de instalación de Go.
+- `go fmt`: Formatea el código según el estilo oficial.
+- `go vet`: Realiza un análisis estático en busca de errores comunes.
+- `go test`: Ejecuta pruebas unitarias.
+- `go mod`: Administra dependencias y módulos en Go.
+- `go mod tidy`: Limpia el archivo go.mod eliminando dependencias no usadas y agregando las necesarias.
+- `go clean`: Limpia archivos de compilación y caché.
+- `go doc`: Muestra la documentación de los paquetes y funciones.
+- `go get`: Descarga, instala y actualiza paquetes desde repositorios remotos.
+- `go tool pprof`: Genera perfiles de rendimiento para identificar cuellos de botella en tu código.
+- `go tool trace`: Genera registros de ejecución detallados para analizar la ejecución de tu programa.
+- `godoc`: Un servidor web para explorar la documentación de los paquetes de Go.
+- `go work`: Administra múltiples módulos en un solo directorio de trabajo.
+- `go env`: Muestra las variables de entorno de Go.
+- `go version`: Muestra la versión del compilador de Go.
+- `go list`: Lista los paquetes instalados.
+- `go mod vendor`: Copia las dependencias a un directorio vendor en tu proyecto, lo que puede ayudar con la gestión de dependencias en entornos de construcción controlados.
+- `go install ./...`: Instala todos los paquetes en el directorio actual y subdirectorios.
+- `go run ./...`: Ejecuta todos los paquetes en el directorio actual y subdirectorios.
+- `go debug (para Go 1.20+)`: Permite interactuar con un depurador para la ejecución del programa en un entorno de desarrollo.
