--- a/Go/Documentación/14.Testeo&Depuración.md
+++ b/Go/Documentación/14.Testeo&Depuración.md
@@ -29,8 +29,8 @@ En Go, el testeo unitario es fundamental para garantizar que las funciones y mé
 
   ```
 
-  - **`import "testing"`:** Importa el paquete testing para utilizar las funcionalidades de pruebas.
-  - **`func TestSuma(t *testing.T)`:** Define una función de prueba para la función Suma. Utiliza el objeto t para reportar errores si la prueba falla
+  - `import "testing"`: Importa el paquete testing para utilizar las funcionalidades de pruebas.
+  - `func TestSuma(t *testing.T)`: Define una función de prueba para la función Suma. Utiliza el objeto t para reportar errores si la prueba falla
 
 - ### Ejecutar pruebas
 
