--- a/Go/Documentación/18.PatronesDiseñoGo.md
+++ b/Go/Documentación/18.PatronesDiseñoGo.md
@@ -4,246 +4,246 @@ En Golang, los patrones de diseño no se implementan exactamente de la misma man
 
 ## 18.1. Patrones Creacionales en Go
 
-### Singleton en Go
+- ### Singleton en Go
 
-En Go, no existen las clases como en otros lenguajes, por lo que los singletons suelen implementarse utilizando variables globales y asegurando la creación única mediante un sync.Once, que garantiza que un bloque de código solo se ejecute una vez.
+  En Go, no existen las clases como en otros lenguajes, por lo que los singletons suelen implementarse utilizando variables globales y asegurando la creación única mediante un sync.Once, que garantiza que un bloque de código solo se ejecute una vez.
 
-```go
-package main
+  ```go
+  package main
 
-import (
-    "fmt"
-    "sync"
-)
+  import (
+      "fmt"
+      "sync"
+  )
 
-var once sync.Once
-var instance *Singleton
+  var once sync.Once
+  var instance *Singleton
 
-type Singleton struct {
-    name string
-}
+  type Singleton struct {
+      name string
+  }
 
-func GetInstance() *Singleton {
-    once.Do(func() {
-        instance = &Singleton{name: "Singleton Instance"}
-    })
-    return instance
-}
+  func GetInstance() *Singleton {
+      once.Do(func() {
+          instance = &Singleton{name: "Singleton Instance"}
+      })
+      return instance
+  }
 
-func main() {
-    singleton := GetInstance()
-    fmt.Println(singleton.name)
-}
+  func main() {
+      singleton := GetInstance()
+      fmt.Println(singleton.name)
+  }
 
-```
+  ```
 
-### Factory en Go
+- ### Factory en Go
 
-En Go, las fábricas no se implementan como en lenguajes OO tradicionales. Sin embargo, las funciones pueden servir como fábricas que retornan diferentes tipos dependiendo de la entrada.
+  En Go, las fábricas no se implementan como en lenguajes OO tradicionales. Sin embargo, las funciones pueden servir como fábricas que retornan diferentes tipos dependiendo de la entrada.
 
-```go
-type Animal interface {
-    Speak() string
-}
+  ```go
+  type Animal interface {
+      Speak() string
+  }
 
-type Dog struct{}
-func (d Dog) Speak() string {
-    return "Woof!"
-}
+  type Dog struct{}
+  func (d Dog) Speak() string {
+      return "Woof!"
+  }
 
-type Cat struct{}
-func (c Cat) Speak() string {
-    return "Meow!"
-}
+  type Cat struct{}
+  func (c Cat) Speak() string {
+      return "Meow!"
+  }
 
-func AnimalFactory(animalType string) Animal {
-    if animalType == "dog" {
-        return Dog{}
-    }
-    if animalType == "cat" {
-        return Cat{}
-    }
-    return nil
-}
+  func AnimalFactory(animalType string) Animal {
+      if animalType == "dog" {
+          return Dog{}
+      }
+      if animalType == "cat" {
+          return Cat{}
+      }
+      return nil
+  }
 
-func main() {
-    dog := AnimalFactory("dog")
-    fmt.Println(dog.Speak())
-}
+  func main() {
+      dog := AnimalFactory("dog")
+      fmt.Println(dog.Speak())
+  }
 
-```
+  ```
 
 ## 18.2. Patrones Estructurales en Go
 
-### Adapter en Go
+- ### Adapter en Go
 
-Go usa interfaces para implementar el patrón de Adaptador. La idea es crear una nueva estructura que envuelva la funcionalidad existente para que se ajuste a una nueva interfaz.
+  Go usa interfaces para implementar el patrón de Adaptador. La idea es crear una nueva estructura que envuelva la funcionalidad existente para que se ajuste a una nueva interfaz.
 
-```go
-type MediaPlayer interface {
-    Play(audioType string, filename string)
-}
+  ```go
+  type MediaPlayer interface {
+      Play(audioType string, filename string)
+  }
 
-type VLCPlayer struct{}
+  type VLCPlayer struct{}
 
-func (v VLCPlayer) PlayVLC(filename string) {
-    fmt.Println("Playing VLC file: ", filename)
-}
+  func (v VLCPlayer) PlayVLC(filename string) {
+      fmt.Println("Playing VLC file: ", filename)
+  }
 
-type AudioAdapter struct {
-    vlcPlayer VLCPlayer
-}
+  type AudioAdapter struct {
+      vlcPlayer VLCPlayer
+  }
 
-func (adapter AudioAdapter) Play(audioType string, filename string) {
-    if audioType == "vlc" {
-        adapter.vlcPlayer.PlayVLC(filename)
-    }
-}
+  func (adapter AudioAdapter) Play(audioType string, filename string) {
+      if audioType == "vlc" {
+          adapter.vlcPlayer.PlayVLC(filename)
+      }
+  }
 
-func main() {
-    adapter := AudioAdapter{vlcPlayer: VLCPlayer{}}
-    adapter.Play("vlc", "movie.vlc")
-}
+  func main() {
+      adapter := AudioAdapter{vlcPlayer: VLCPlayer{}}
+      adapter.Play("vlc", "movie.vlc")
+  }
 
-```
+  ```
 
-### Decorator en Go
+- ### Decorator en Go
 
-Los decoradores se implementan envolviendo funciones u objetos para agregar comportamiento adicional.
+  Los decoradores se implementan envolviendo funciones u objetos para agregar comportamiento adicional.
 
-```go
-type Notifier interface {
-    Send(message string)
-}
+  ```go
+  type Notifier interface {
+      Send(message string)
+  }
 
-type EmailNotifier struct{}
+  type EmailNotifier struct{}
 
-func (e EmailNotifier) Send(message string) {
-    fmt.Println("Sending email:", message)
-}
+  func (e EmailNotifier) Send(message string) {
+      fmt.Println("Sending email:", message)
+  }
 
-type SMSNotifier struct {
-    Notifier
-}
+  type SMSNotifier struct {
+      Notifier
+  }
 
-func (s SMSNotifier) Send(message string) {
-    s.Notifier.Send(message)
-    fmt.Println("Sending SMS:", message)
-}
+  func (s SMSNotifier) Send(message string) {
+      s.Notifier.Send(message)
+      fmt.Println("Sending SMS:", message)
+  }
 
-func main() {
-    email := EmailNotifier{}
-    sms := SMSNotifier{Notifier: email}
-    sms.Send("Hello")
-}
+  func main() {
+      email := EmailNotifier{}
+      sms := SMSNotifier{Notifier: email}
+      sms.Send("Hello")
+  }
 
-```
+  ```
 
 ## 18.3. Patrones Comportamentales en Go
 
-### Strategy en Go
+- ### Strategy en Go
 
-El patrón Strategy se implementa usando interfaces. Go permite que las funciones sean intercambiables como estrategias.
+  El patrón Strategy se implementa usando interfaces. Go permite que las funciones sean intercambiables como estrategias.
 
-```go
-type PaymentStrategy interface {
-    Pay(amount int)
-}
+  ```go
+  type PaymentStrategy interface {
+      Pay(amount int)
+  }
 
-type CreditCard struct{}
+  type CreditCard struct{}
 
-func (c CreditCard) Pay(amount int) {
-    fmt.Println("Paid with credit card:", amount)
-}
+  func (c CreditCard) Pay(amount int) {
+      fmt.Println("Paid with credit card:", amount)
+  }
 
-type PayPal struct{}
+  type PayPal struct{}
 
-func (p PayPal) Pay(amount int) {
-    fmt.Println("Paid with PayPal:", amount)
-}
+  func (p PayPal) Pay(amount int) {
+      fmt.Println("Paid with PayPal:", amount)
+  }
 
-func main() {
-    var paymentMethod PaymentStrategy = CreditCard{}
-    paymentMethod.Pay(100)
+  func main() {
+      var paymentMethod PaymentStrategy = CreditCard{}
+      paymentMethod.Pay(100)
 
-    paymentMethod = PayPal{}
-    paymentMethod.Pay(200)
-}
+      paymentMethod = PayPal{}
+      paymentMethod.Pay(200)
+  }
 
-```
+  ```
 
-### Observer en Go
+- ### Observer en Go
 
-El patrón Observer puede implementarse utilizando canales (channels) o funciones callback en Go, lo que permite una forma natural de enviar notificaciones.
+  El patrón Observer puede implementarse utilizando canales (channels) o funciones callback en Go, lo que permite una forma natural de enviar notificaciones.
 
-```go
-type Observer interface {
-    Update(message string)
-}
+  ```go
+  type Observer interface {
+      Update(message string)
+  }
 
-type ConcreteObserver struct {
-    name string
-}
+  type ConcreteObserver struct {
+      name string
+  }
 
-func (o ConcreteObserver) Update(message string) {
-    fmt.Println(o.name, "received message:", message)
-}
+  func (o ConcreteObserver) Update(message string) {
+      fmt.Println(o.name, "received message:", message)
+  }
 
-type Subject struct {
-    observers []Observer
-}
+  type Subject struct {
+      observers []Observer
+  }
 
-func (s *Subject) AddObserver(o Observer) {
-    s.observers = append(s.observers, o)
-}
+  func (s *Subject) AddObserver(o Observer) {
+      s.observers = append(s.observers, o)
+  }
 
-func (s *Subject) NotifyAll(message string) {
-    for _, observer := range s.observers {
-        observer.Update(message)
-    }
-}
+  func (s *Subject) NotifyAll(message string) {
+      for _, observer := range s.observers {
+          observer.Update(message)
+      }
+  }
 
-func main() {
-    observer1 := ConcreteObserver{name: "Observer1"}
-    observer2 := ConcreteObserver{name: "Observer2"}
+  func main() {
+      observer1 := ConcreteObserver{name: "Observer1"}
+      observer2 := ConcreteObserver{name: "Observer2"}
 
-    subject := &Subject{}
-    subject.AddObserver(observer1)
-    subject.AddObserver(observer2)
+      subject := &Subject{}
+      subject.AddObserver(observer1)
+      subject.AddObserver(observer2)
 
-    subject.NotifyAll("Event Occurred")
-}
+      subject.NotifyAll("Event Occurred")
+  }
 
-```
+  ```
 
 ## 18.4. Arquitectura en Go
 
-### Microservicios
+- ### Microservicios
 
-Go es ampliamente utilizado para construir microservicios debido a su rendimiento y eficiencia. Go permite crear APIs y servicios rápidos y eficientes usando paquetes como net/http y frameworks como Gin o Echo.
+  Go es ampliamente utilizado para construir microservicios debido a su rendimiento y eficiencia. Go permite crear APIs y servicios rápidos y eficientes usando paquetes como net/http y frameworks como Gin o Echo.
 
-```go
-package main
+  ```go
+  package main
 
-import "github.com/gin-gonic/gin"
+  import "github.com/gin-gonic/gin"
 
-func main() {
-    router := gin.Default()
+  func main() {
+      router := gin.Default()
 
-    router.GET("/ping", func(c *gin.Context) {
-        c.JSON(200, gin.H{
-            "message": "pong",
-        })
-    })
+      router.GET("/ping", func(c *gin.Context) {
+          c.JSON(200, gin.H{
+              "message": "pong",
+          })
+      })
 
-    router.Run(":8080") // Corriendo el servidor en el puerto 8080
-}
+      router.Run(":8080") // Corriendo el servidor en el puerto 8080
+  }
 
-```
+  ```
 
-### Arquitectura Hexagonal
+- ### Arquitectura Hexagonal
 
-En Go, se puede implementar la arquitectura hexagonal dividiendo el código en capas y adaptadores, asegurando que la lógica de negocio sea independiente de la entrada y salida. Los adaptadores pueden manejar las interfaces externas (HTTP, bases de datos, etc.) mientras la lógica central permanece limpia y modular.
+  En Go, se puede implementar la arquitectura hexagonal dividiendo el código en capas y adaptadores, asegurando que la lógica de negocio sea independiente de la entrada y salida. Los adaptadores pueden manejar las interfaces externas (HTTP, bases de datos, etc.) mientras la lógica central permanece limpia y modular.
 
 ## 18.5. Estructura de carpetas en Go
 
