--- a/Go/Documentación/20.BuenasPracticas.md
+++ b/Go/Documentación/20.BuenasPracticas.md
@@ -50,30 +50,30 @@ Aunque Go no es puramente orientado a objetos, muchos de estos principios pueden
 - **Interface Segregation:** En Go, es preferible definir interfaces pequeñas y específicas en lugar de interfaces grandes y genéricas.
 - **Dependency Inversion:** Los componentes de alto nivel no deben depender de los de bajo nivel. En Go, esto se implementa utilizando interfaces para inyectar dependencias.
 
-  - Ejemplo en Go utilizando el principio de Dependency Inversion con interfaces:
+  - **Ejemplo en Go utilizando el principio de Dependency Inversion con interfaces:**
 
-  ```go
-  type Notifier interface {
-      SendNotification(message string) error
-  }
+    ```go
+    type Notifier interface {
+        SendNotification(message string) error
+    }
 
-  type EmailNotifier struct{}
+    type EmailNotifier struct{}
 
-  func (e EmailNotifier) SendNotification(message string) error {
-      fmt.Println("Sending email:", message)
-      return nil
-  }
+    func (e EmailNotifier) SendNotification(message string) error {
+        fmt.Println("Sending email:", message)
+        return nil
+    }
 
-  func notifyUser(n Notifier, message string) {
-      n.SendNotification(message)
-  }
+    func notifyUser(n Notifier, message string) {
+        n.SendNotification(message)
+    }
 
-  func main() {
-      notifier := EmailNotifier{}
-      notifyUser(notifier, "Hello, Go!")
-  }
+    func main() {
+        notifier := EmailNotifier{}
+        notifyUser(notifier, "Hello, Go!")
+    }
 
-  ```
+    ```
 
 ---
 
@@ -91,45 +91,45 @@ Go fomenta la creación de comentarios útiles antes de funciones y estructuras 
 
 - **Tipos:** Comentarios en el código, documentación de funciones, tipos y paquetes, así como documentación general del proyecto (README, documentación autogenerada con godoc).
 
-```go
-// calculateSum returns the sum of two integers.
-func calculateSum(a, b int) int {
-    return a + b
-}
+  ```go
+  // calculateSum returns the sum of two integers.
+  func calculateSum(a, b int) int {
+      return a + b
+  }
 
-```
+  ```
 
 ---
 
 ## Otras Buenas Practicas
 
-### Pruebas Unitarias
+- ### Pruebas Unitarias
 
-**Objetivo:** Verificar que cada parte del código funcione correctamente de forma aislada.
-**Beneficios:** Facilita el mantenimiento y la refactorización, detecta errores tempranos y asegura la estabilidad del código.
+  - **Objetivo:** Verificar que cada parte del código funcione correctamente de forma aislada.
+  - **Beneficios:** Facilita el mantenimiento y la refactorización, detecta errores tempranos y asegura la estabilidad del código.
 
-```go
-func TestCalculateSum(t *testing.T) {
-    result := calculateSum(5)
-    expected := 10
-    if result != expected {
-        t.Errorf("calculateSum(5) = %d; expected %d", result, expected)
+    ```go
+    func TestCalculateSum(t *testing.T) {
+        result := calculateSum(5)
+        expected := 10
+        if result != expected {
+            t.Errorf("calculateSum(5) = %d; expected %d", result, expected)
+        }
     }
-}
 
-```
+    ```
 
-### Code Review
+- ### Code Review
 
-**Objetivo:** Realizar revisiones colaborativas del código para identificar posibles errores, mejorar la calidad del código y mantener un estilo de codificación consistente.
-En Go, se recomienda realizar code reviews antes de fusionar cambios en ramas principales, utilizando herramientas como GitHub, GitLab o Gerrit.
+  - **Objetivo:** Realizar revisiones colaborativas del código para identificar posibles errores, mejorar la calidad del código y mantener un estilo de codificación consistente.
+    En Go, se recomienda realizar code reviews antes de fusionar cambios en ramas principales, utilizando herramientas como GitHub, GitLab o Gerrit.
 
-### Versionamiento
+- ### Versionamiento
 
-**Objetivo:** Controlar los cambios en el código, rastrear versiones y facilitar la colaboración.
-**Herramientas:** Git es la más comúnmente utilizada, y Go promueve la modularización del código con el uso de go.mod para gestionar dependencias y versiones.
+  - **Objetivo:** Controlar los cambios en el código, rastrear versiones y facilitar la colaboración.
+  - **Herramientas:** Git es la más comúnmente utilizada, y Go promueve la modularización del código con el uso de go.mod para gestionar dependencias y versiones.
 
-- Ejemplo de go.mod:
+- **Ejemplo de go.mod:**
 
   ```go
   module github.com/user/project
@@ -144,18 +144,18 @@ En Go, se recomienda realizar code reviews antes de fusionar cambios en ramas pr
 
 ## Otras Consideraciones
 
-### Legibilidad
+- ### Legibilidad
 
-Utiliza nombres de variables y funciones descriptivos, indenta correctamente el código y sigue las convenciones establecidas por la comunidad de Go, como el uso de gofmt para formatear el código y golint para seguir las mejores prácticas de estilo.
+  Utiliza nombres de variables y funciones descriptivos, indenta correctamente el código y sigue las convenciones establecidas por la comunidad de Go, como el uso de gofmt para formatear el código y golint para seguir las mejores prácticas de estilo.
 
-### Eficiencia
+- ### Eficiencia
 
-Go está diseñado para ser eficiente en el uso de memoria y CPU. Es recomendable evitar asignaciones innecesarias de memoria y utilizar concurrencia (goroutines) cuando sea adecuado.
+  Go está diseñado para ser eficiente en el uso de memoria y CPU. Es recomendable evitar asignaciones innecesarias de memoria y utilizar concurrencia (goroutines) cuando sea adecuado.
 
-3## Mantenibilidad
+- ### Mantenibilidad
 
-El código debe ser modular y fácil de extender. Los paquetes bien definidos y el uso de interfaces son fundamentales en Go para garantizar la mantenibilidad del software a largo plazo.
+  El código debe ser modular y fácil de extender. Los paquetes bien definidos y el uso de interfaces son fundamentales en Go para garantizar la mantenibilidad del software a largo plazo.
 
-### Seguridad
+- ### Seguridad
 
-Protege tu aplicación de vulnerabilidades comunes como inyección SQL, ataques de Cross-Site Scripting (XSS) y Cross-Site Request Forgery (CSRF). Go tiene herramientas integradas como html/template para evitar XSS, y paquetes como crypto para cifrado y autenticación.
+  Protege tu aplicación de vulnerabilidades comunes como inyección SQL, ataques de Cross-Site Scripting (XSS) y Cross-Site Request Forgery (CSRF). Go tiene herramientas integradas como html/template para evitar XSS, y paquetes como crypto para cifrado y autenticación.
