--- a/Go/Documentación/23. FuncionesBuild-in.md
+++ b/Go/Documentación/23. FuncionesBuild-in.md
@@ -4,54 +4,54 @@ Go, ofrece un conjunto robusto de funciones integradas que simplifican significa
 
 ## 23.1. Funciones Nativas Sin Librerías
 
-- **append:** Agrega elementos a un slice y devuelve el slice modificado.
-- **cap:** Devuelve la capacidad de un slice, array o channel.
-- **close:** Cierra un channel para que no se puedan enviar más valores.
-- **complex:** Crea un número complejo a partir de dos números flotantes.
-- **copy:** Copia elementos de un slice a otro y devuelve el número de elementos copiados.
-- **delete:** Elimina una clave específica de un map.
-- **imag:** Devuelve la parte imaginaria de un número complejo.
-- **len:** Devuelve la longitud de un array, slice, map, string o channel.
-- **make:** Crea y devuelve un slice, map o channel con un tamaño o capacidad inicial.
-- **new:** Asigna y devuelve un puntero a una nueva variable del tipo dado.
-- **panic:** Lanza un pánico, que es una interrupción del flujo normal del programa.
-- **print:** Imprime valores (no recomendado para producción, solo para debugging).
-- **println:** Imprime valores con una nueva línea (también para debugging).
-- **real:** Devuelve la parte real de un número complejo.
-- **recover:** Recupera la ejecución de una función tras un panic, evitando que el programa termine.
+- `append:` Agrega elementos a un slice y devuelve el slice modificado.
+- `cap:` Devuelve la capacidad de un slice, array o channel.
+- `close:` Cierra un channel para que no se puedan enviar más valores.
+- `complex:` Crea un número complejo a partir de dos números flotantes.
+- `copy:` Copia elementos de un slice a otro y devuelve el número de elementos copiados.
+- `delete:` Elimina una clave específica de un map.
+- `imag:` Devuelve la parte imaginaria de un número complejo.
+- `len:` Devuelve la longitud de un array, slice, map, string o channel.
+- `make:` Crea y devuelve un slice, map o channel con un tamaño o capacidad inicial.
+- `new:` Asigna y devuelve un puntero a una nueva variable del tipo dado.
+- `panic:` Lanza un pánico, que es una interrupción del flujo normal del programa.
+- `print:` Imprime valores (no recomendado para producción, solo para debugging).
+- `println:` Imprime valores con una nueva línea (también para debugging).
+- `real:` Devuelve la parte real de un número complejo.
+- `recover:` Recupera la ejecución de una función tras un panic, evitando que el programa termine.
 
 ### Tipos de Datos
 
-- **error:** Devuelve un valor de tipo error, que es una interfaz estándar para errores.
-- **bool:** Convierte un valor a tipo booleano (true o false).
-- **byte:** Tipo alias para uint8, se usa comúnmente para representar bytes.
-- **rune:** Tipo alias para int32, usado para representar un código de punto Unicode.
-- **int:** Convierte un valor a tipo entero.
-- **uint:** Convierte un valor a tipo entero sin signo.
-- **uintptr:** Convierte un valor a un tipo uintptr, utilizado para punteros.
-- **float32:** Convierte un valor a tipo flotante de 32 bits.
-- **float64:** Convierte un valor a tipo flotante de 64 bits.
-- **complex64:** Convierte dos números a un número complejo de 64 bits.
-- **complex128:** Convierte dos números a un número complejo de 128 bits.
-- **string:** Convierte un valor a tipo cadena de texto.
-- **int8:** Convierte un valor a un entero de 8 bits con signo.
-- **int16:** Convierte un valor a un entero de 16 bits con signo.
-- **int32:** Convierte un valor a un entero de 32 bits con signo.
-- **int64:** Convierte un valor a un entero de 64 bits con signo.
-- **uint8:** Convierte un valor a un entero de 8 bits sin signo.
-- **uint16:** Convierte un valor a un entero de 16 bits sin signo.
-- **uint32:** Convierte un valor a un entero de 32 bits sin signo.
-- **uint64:** Convierte un valor a un entero de 64 bits sin signo.
-- **any:** Alias para `interface{}`, que permite representar cualquier tipo de valor.
-- **iota:** Utilizado principalmente en bloques de constantes, comienza en 0 y se incrementa en cada uso dentro del bloque.
-- **nil:** Valor cero para punteros, interfaces, mapas, slices, canales y funciones.
+- `error:` Devuelve un valor de tipo error, que es una interfaz estándar para errores.
+- `bool:` Convierte un valor a tipo booleano (true o false).
+- `byte:` Tipo alias para uint8, se usa comúnmente para representar bytes.
+- `rune:` Tipo alias para int32, usado para representar un código de punto Unicode.
+- `int:` Convierte un valor a tipo entero.
+- `uint:` Convierte un valor a tipo entero sin signo.
+- `uintptr:` Convierte un valor a un tipo uintptr, utilizado para punteros.
+- `float32:` Convierte un valor a tipo flotante de 32 bits.
+- `float64:` Convierte un valor a tipo flotante de 64 bits.
+- `complex64:` Convierte dos números a un número complejo de 64 bits.
+- `complex128:` Convierte dos números a un número complejo de 128 bits.
+- `string:` Convierte un valor a tipo cadena de texto.
+- `int8:` Convierte un valor a un entero de 8 bits con signo.
+- `int16:` Convierte un valor a un entero de 16 bits con signo.
+- `int32:` Convierte un valor a un entero de 32 bits con signo.
+- `int64:` Convierte un valor a un entero de 64 bits con signo.
+- `uint8:` Convierte un valor a un entero de 8 bits sin signo.
+- `uint16:` Convierte un valor a un entero de 16 bits sin signo.
+- `uint32:` Convierte un valor a un entero de 32 bits sin signo.
+- `uint64:` Convierte un valor a un entero de 64 bits sin signo.
+- `any:` Alias para `interface{}`, que permite representar cualquier tipo de valor.
+- `iota:` Utilizado principalmente en bloques de constantes, comienza en 0 y se incrementa en cada uso dentro del bloque.
+- `nil:` Valor cero para punteros, interfaces, mapas, slices, canales y funciones.
 
 ### Control de Concurrencia
 
-- **defer:** Pospone la ejecución de una función hasta que la función que la contiene retorne.
-- **go:** Inicia una goroutine para ejecutar funciones concurrentemente.
-- **select:** Espera múltiples operaciones de canal.
-- **uintptr:** Similar a `int`, pero específico para almacenar punteros que pueden ser manipulados de forma numérica.
+- `defer:` Pospone la ejecución de una función hasta que la función que la contiene retorne.
+- `go:` Inicia una goroutine para ejecutar funciones concurrentemente.
+- `select:` Espera múltiples operaciones de canal.
+- `uintptr:` Similar a `int`, pero específico para almacenar punteros que pueden ser manipulados de forma numérica.
 
 ---
 
