--- a/Go/Documentación/24.ManejoBinarios.md
+++ b/Go/Documentación/24.ManejoBinarios.md
@@ -2,88 +2,90 @@
 
 Los archivos binarios pueden ser leídos y escritos utilizando las funciones del paquete os y encoding/binary para manejar datos binarios estructurados.
 
-## Leer un Archivo Binario
+## 24.1. Trabajando con Binarios
 
-```go
-package main
+- ### Leer un Archivo Binario
 
-import (
-    "fmt"
-    "os"
-)
+  ```go
+  package main
 
-func main() {
-    file, err := os.Open("archivo.bin")
-    if err != nil {
-        fmt.Println("Error al abrir el archivo:", err)
-        return
-    }
-    defer file.Close()
+  import (
+      "fmt"
+      "os"
+  )
 
-    // Leer datos binarios
-    data := make([]byte, 1024) // Ajustar el tamaño según el archivo
-    _, err = file.Read(data)
-    if err != nil {
-        fmt.Println("Error al leer el archivo:", err)
-        return
-    }
-    fmt.Println("Datos leídos:", data)
-}
+  func main() {
+      file, err := os.Open("archivo.bin")
+      if err != nil {
+          fmt.Println("Error al abrir el archivo:", err)
+          return
+      }
+      defer file.Close()
 
-```
+      // Leer datos binarios
+      data := make([]byte, 1024) // Ajustar el tamaño según el archivo
+      _, err = file.Read(data)
+      if err != nil {
+          fmt.Println("Error al leer el archivo:", err)
+          return
+      }
+      fmt.Println("Datos leídos:", data)
+  }
 
-## Escribir en un Archivo Binario
+  ```
 
-```go
-package main
+- ### Escribir en un Archivo Binario
 
-import (
-    "fmt"
-    "os"
-)
+  ```go
+  package main
 
-func main() {
-    file, err := os.Create("archivo.bin")
-    if err != nil {
-        fmt.Println("Error al crear el archivo:", err)
-        return
-    }
-    defer file.Close()
+  import (
+      "fmt"
+      "os"
+  )
 
-    data := []byte{0x01, 0x02, 0x03, 0x04}
-    _, err = file.Write(data)
-    if err != nil {
-        fmt.Println("Error al escribir en el archivo:", err)
-        return
-    }
-    fmt.Println("Datos escritos con éxito")
-}
+  func main() {
+      file, err := os.Create("archivo.bin")
+      if err != nil {
+          fmt.Println("Error al crear el archivo:", err)
+          return
+      }
+      defer file.Close()
 
-```
+      data := []byte{0x01, 0x02, 0x03, 0x04}
+      _, err = file.Write(data)
+      if err != nil {
+          fmt.Println("Error al escribir en el archivo:", err)
+          return
+      }
+      fmt.Println("Datos escritos con éxito")
+  }
 
-## Leer Datos Binarios Estructurados
+  ```
 
-Para leer datos binarios estructurados (como enteros de 4 bytes), usa `encoding/binary`:
+- ### Leer Datos Binarios Estructurados
 
-```go
-package main
+  Para leer datos binarios estructurados (como enteros de 4 bytes), usa `encoding/binary`:
 
-import (
-    "bytes"
-    "encoding/binary"
-    "fmt"
-)
+  ```go
+  package main
 
-func main() {
-    buf := bytes.NewBuffer([]byte{0x00, 0x00, 0x01, 0x02})
+  import (
+      "bytes"
+      "encoding/binary"
+      "fmt"
+  )
 
-    var value uint32
-    err := binary.Read(buf, binary.BigEndian, &value)
-    if err != nil {
-        fmt.Println("Error al leer datos binarios:", err)
-        return
-    }
-    fmt.Println("Valor leído:", value)
-}
+  func main() {
+      buf := bytes.NewBuffer([]byte{0x00, 0x00, 0x01, 0x02})
 
-```
+      var value uint32
+      err := binary.Read(buf, binary.BigEndian, &value)
+      if err != nil {
+          fmt.Println("Error al leer datos binarios:", err)
+          return
+      }
+      fmt.Println("Valor leído:", value)
+  }
+
+  ```
