--- a/Go/Documentación/8.OPP.md
+++ b/Go/Documentación/8.OPP.md
@@ -158,11 +158,11 @@ Los métodos se definen sobre un tipo, que puede ser un `struct` o un tipo defin
 
   ```
 
-  - **receiver:** Es una variable que actúa como el receptor del método. Puede ser un valor o un puntero al tipo. El receptor aparece entre paréntesis antes del nombre del método.
-  - **ReceiverType:** Es el tipo al que el método está asociado.
-  - **MethodName:** Es el nombre del método.
-  - **parameters**: Son los parámetros que recibe el método.
-  - **returnType:** Es el tipo de valor que devuelve el método.
+  - `receiver`: Es una variable que actúa como el receptor del método. Puede ser un valor o un puntero al tipo. El receptor aparece entre paréntesis antes del nombre del método.
+  - `ReceiverType`: Es el tipo al que el método está asociado.
+  - `MethodName`: Es el nombre del método.
+  - `parameters`: Son los parámetros que recibe el método.
+  - `returnType`: Es el tipo de valor que devuelve el método.
 
 ---
 
