--- a/Python/Documentación/1.Sintaxis&Variables.md
+++ b/Python/Documentación/1.Sintaxis&Variables.md
@@ -2,58 +2,58 @@
 
 ## 1.1 Sintaxis Básica
 
-Python es un lenguaje interpretado y de alto nivel con una sintaxis clara y concisa. El código en Python se organiza en bloques indentados en lugar de usar llaves.
+Python es un lenguaje interpretado y de alto nivel con una sintaxis clara y concisa. El código en Python se organiza en **bloques indentados** en lugar de usar llaves.
 
-### Estructura del Lenguaje
+- ### Estructura del Lenguaje
 
-- **Paquetes:** Los programas en Python pueden usar módulos y paquetes. Se importan usando la palabra clave `import`.
+  - **Paquetes:** Los programas en Python pueden usar módulos y paquetes. Se importan usando la palabra clave `import`.
+
+    ```py
+    import math
+
+    ```
+
+  - **Funciones:** La función principal es el punto de entrada del programa, aunque no hay una función main obligatoria.
+
+    ```py
+    def main():
+        print("Hola, Python!")
+
+    if __name__ == "__main__":
+        main()
+
+    ```
+
+- ### Palabras Clave
+
+  Algunas palabras clave importantes en Python son:
+
+  - `def`, `return`: Para definir funciones y devolver valores.
+  - `if`, `else`, `elif`: Estructuras de control condicional.
+  - `for`, `while`: Estructuras de control de bucles.
+  - `import`, `from`: Para importar módulos y funciones.
+  - `class`: Para definir clases.
+
+- ### Operadores
+
+  Python incluye operadores aritméticos, lógicos, de comparación y bit a bit.
+
+  - Aritméticos: `+`, `-`, `*`, `/`, `%`, `**` (potencia), `//` (división entera)
+  - Comparación: `==`, `!=`, `<`, `>`, `<=`, `>=`
+  - Lógicos: `and`, `or`, `not`
+  - Bit a bit: `&`, `|`, `^`, `~`, `<<`, `>>`
+
+- ### Terminadores
+
+  Python no usa punto y coma al final de las sentencias; las líneas se terminan con un salto de línea. Para continuar una línea, se puede usar una barra invertida (`\`) o encerrar las expresiones entre paréntesis.
 
   ```py
-  import math
+  long_variable_name = (
+      "Este es un ejemplo de una línea de código muy larga "
+      "que se puede dividir en dos líneas usando paréntesis."
+  )
 
   ```
-
-- **Funciones:** La función principal es el punto de entrada del programa, aunque no hay una función main obligatoria.
-
-  ```py
-  def main():
-      print("Hola, Python!")
-
-  if __name__ == "__main__":
-      main()
-
-  ```
-
-### Palabras Clave
-
-Algunas palabras clave importantes en Python son:
-
-- `def`, `return`: Para definir funciones y devolver valores.
-- `if`, `else`, `elif`: Estructuras de control condicional.
-- `for`, `while`: Estructuras de control de bucles.
-- `import`, `from`: Para importar módulos y funciones.
-- `class`: Para definir clases.
-
-### Operadores
-
-Python incluye operadores aritméticos, lógicos, de comparación y bit a bit.
-
-- Aritméticos: `+`, `-`, `*`, `/`, `%`, `**` (potencia), `//` (división entera)
-- Comparación: `==`, `!=`, `<`, `>`, `<=`, `>=`
-- Lógicos: `and`, `or`, `not`
-- Bit a bit: `&`, `|`, `^`, `~`, `<<`, `>>`
-
-### Terminadores
-
-Python no usa punto y coma al final de las sentencias; las líneas se terminan con un salto de línea. Para continuar una línea, se puede usar una barra invertida (`\`) o encerrar las expresiones entre paréntesis.
-
-```py
-long_variable_name = (
-    "Este es un ejemplo de una línea de código muy larga "
-    "que se puede dividir en dos líneas usando paréntesis."
-)
-
-```
 
 ---
 
@@ -61,45 +61,45 @@ long_variable_name = (
 
 En Python, las variables se definen de manera sencilla sin necesidad de especificar el tipo explícitamente. Python utiliza inferencia de tipos.
 
-### Tipos de Variables
+- ### Tipos de Variables
 
-- **Declaración implícita:**
+  - **Declaración implícita:**
 
-  ```py
-  x = 10  # int
-  name = "KevinDev"  # str
+    ```py
+    x = 10  # int
+    name = "KevinDev"  # str
 
-  ```
+    ```
 
-- **Tipos de Datos Básicos:**
+  - **Tipos de Datos Básicos:**
 
-  - `int`: Enteros.
-  - `float`: Números de punto flotante.
-  - `str`: Cadenas de texto.
-  - `bool`: Valores booleanos (True, False).
-  - `list`: Listas.
-  - `tuple`: Tuplas.
-  - `set`: Conjuntos.
-  - `dict`: Diccionarios.
+    - `int`: Enteros.
+    - `float`: Números de punto flotante.
+    - `str`: Cadenas de texto.
+    - `bool`: Valores booleanos (True, False).
+    - `list`: Listas.
+    - `tuple`: Tuplas.
+    - `set`: Conjuntos.
+    - `dict`: Diccionarios.
 
-  ```py
-  num = 42  # int
-  decimal = 3.14  # float
-  flag = True  # bool
-  character = 'A'  # str
+      ```py
+      num = 42  # int
+      decimal = 3.14  # float
+      flag = True  # bool
+      character = 'A'  # str
 
-  ```
+      ```
 
-- **Mutabilidad:**
+  - **Mutabilidad:**
 
-  Las variables en Python son mutables si se trata de tipos como listas, diccionarios y conjuntos. Los tipos básicos como int, float y str son inmutables.
+    Las variables en Python son mutables si se trata de tipos como listas, diccionarios y conjuntos. Los tipos básicos como int, float y str son inmutables.
 
-  ```py
-  # Mutabilidad
-  lista = [1, 2, 3]
-  lista.append(4)  # Modifica la lista original
+    ```py
+    # Mutabilidad
+    lista = [1, 2, 3]
+    lista.append(4)  # Modifica la lista original
 
-  ```
+    ```
 
 ---
 
@@ -107,38 +107,38 @@ En Python, las variables se definen de manera sencilla sin necesidad de especifi
 
 El ámbito de una variable define su visibilidad dentro del programa.
 
-### Alcance Global
+- ### Alcance Global
 
-Las variables declaradas fuera de cualquier función tienen alcance global y pueden ser accedidas en cualquier parte del módulo.
+  Las variables declaradas fuera de cualquier función tienen alcance global y pueden ser accedidas en cualquier parte del módulo.
 
-```py
-global_var = "Visible en todo el módulo"
+  ```py
+  global_var = "Visible en todo el módulo"
 
-def ejemplo():
-    print(global_var)  # Acceso permitido
+  def ejemplo():
+      print(global_var)  # Acceso permitido
 
-```
+  ```
 
-### Alcance Local
+- ### Alcance Local
 
-Las variables declaradas dentro de una función tienen alcance local y solo son accesibles dentro de esa función.
+  Las variables declaradas dentro de una función tienen alcance local y solo son accesibles dentro de esa función.
 
-```py
-def ejemplo():
-    local_var = "Solo visible aquí"
-    print(local_var)
+  ```py
+  def ejemplo():
+      local_var = "Solo visible aquí"
+      print(local_var)
 
-```
+  ```
 
-### Reglas de Visibilidad
+- ### Reglas de Visibilidad
 
-- **Ámbito del módulo:** Las variables definidas fuera de cualquier función son accesibles en todo el módulo.
-- **Ámbito de función:** Las variables definidas dentro de una función solo son accesibles dentro de esa función.
-- **Ámbito de clase:** Las variables definidas dentro de una clase son accesibles dentro de los métodos de la clase.
+  - **Ámbito del módulo:** Las variables definidas fuera de cualquier función son accesibles en todo el módulo.
+  - **Ámbito de función:** Las variables definidas dentro de una función solo son accesibles dentro de esa función.
+  - **Ámbito de clase:** Las variables definidas dentro de una clase son accesibles dentro de los métodos de la clase.
 
-### Contexto de Ejecución
+- ### Contexto de Ejecución
 
-Python maneja las variables según el contexto de ejecución, permitiendo accesos y modificaciones basadas en el lugar de la declaración.
+  Python maneja las variables según el contexto de ejecución, permitiendo accesos y modificaciones basadas en el lugar de la declaración.
 
 ---
 
@@ -146,28 +146,28 @@ Python maneja las variables según el contexto de ejecución, permitiendo acceso
 
 En Python, la conversión de tipos se realiza explícitamente usando funciones integradas.
 
-### Conversión Explícita
+- ### Conversión Explícita
 
-```py
-entero = 42
-decimal = float(entero)  # Conversión explícita de int a float
-print(decimal)
+  ```py
+  entero = 42
+  decimal = float(entero)  # Conversión explícita de int a float
+  print(decimal)
 
-cadena = str(entero)  # Conversión explícita de int a str
+  cadena = str(entero)  # Conversión explícita de int a str
 
-```
+  ```
 
-### Conversión Implícita
+- ### Conversión Implícita
 
-Python realiza algunas conversiones implícitas en operaciones entre tipos compatibles, pero para otros casos, se necesita conversión explícita.
+  Python realiza algunas conversiones implícitas en operaciones entre tipos compatibles, pero para otros casos, se necesita conversión explícita.
 
-```py
-x = 5
-y = 2.5
-resultado = x + y  # int a float automáticamente
-print(resultado)  # Imprime 7.5
+  ```py
+  x = 5
+  y = 2.5
+  resultado = x + y  # int a float automáticamente
+  print(resultado)  # Imprime 7.5
 
-```
+  ```
 
 ---
 
@@ -181,15 +181,15 @@ GREETING = "Hello, Python"
 
 ```
 
-### Uso de Constantes
+- ### Uso de Constantes
 
-Aunque no se puede hacer cumplir la inmutabilidad, las constantes se usan como valores que no deberían modificarse durante la ejecución del programa.
+  Aunque no se puede hacer cumplir la inmutabilidad, las constantes se usan como valores que no deberían modificarse durante la ejecución del programa.
 
-```py
-MAX_CONNECTIONS = 100
-USERNAME = "admin"
+  ```py
+  MAX_CONNECTIONS = 100
+  USERNAME = "admin"
 
-```
+  ```
 
 ---
 
@@ -197,18 +197,18 @@ USERNAME = "admin"
 
 En Python, los caracteres de escape se utilizan en cadenas para representar caracteres especiales.
 
-### Caracteres de Escape Comunes
+- ### Caracteres de Escape Comunes
 
-`\n`: Nueva línea
-`\t`: Tabulador
-`\r`: Retorno de carro
-`\b`: Retroceso (borra el carácter anterior)
-`\f`: Salto de página
-`\\`: Barra invertida literal
-`\`": Comilla doble literal
-`\`': Comilla simple literal
-`\ooo`: Carácter octal (donde o es un dígito octal)
-`\xhh`: Carácter hexadecimal (donde h es un dígito hexadecimal)
+  `\n`: Nueva línea
+  `\t`: Tabulador
+  `\r`: Retorno de carro
+  `\b`: Retroceso (borra el carácter anterior)
+  `\f`: Salto de página
+  `\\`: Barra invertida literal
+  `\`": Comilla doble literal
+  `\`': Comilla simple literal
+  `\ooo`: Carácter octal (donde o es un dígito octal)
+  `\xhh`: Carácter hexadecimal (donde h es un dígito hexadecimal)
 
 ---
 
@@ -216,55 +216,55 @@ En Python, los caracteres de escape se utilizan en cadenas para representar cara
 
 En Python, los argumentos de línea de comandos se acceden a través del módulo `sys`. Estos argumentos incluyen el nombre del script y cualquier argumento adicional proporcionado.
 
-### Acceso a los Argumentos
+- ### Acceso a los Argumentos
 
-Los argumentos se encuentran en `sys.argv`, donde el primer elemento (`sys.argv[0]`) es el nombre del script, y los elementos siguientes son los argumentos proporcionados.
+  Los argumentos se encuentran en `sys.argv`, donde el primer elemento (`sys.argv[0]`) es el nombre del script, y los elementos siguientes son los argumentos proporcionados.
 
-```py
-import sys
+  ```py
+  import sys
 
-def main():
-    # Imprimir todos los argumentos de la línea de comandos
-    print(sys.argv)
+  def main():
+      # Imprimir todos los argumentos de la línea de comandos
+      print(sys.argv)
 
-    # Acceder al primer argumento pasado (si existe)
-    if len(sys.argv) > 1:
-        print("Argumento 1:", sys.argv[1])
-    else:
-        print("No se pasaron argumentos.")
+      # Acceder al primer argumento pasado (si existe)
+      if len(sys.argv) > 1:
+          print("Argumento 1:", sys.argv[1])
+      else:
+          print("No se pasaron argumentos.")
 
-if __name__ == "__main__":
-    main()
+  if __name__ == "__main__":
+      main()
 
-```
+  ```
 
-### Ejecución con Argumentos
+- ### Ejecución con Argumentos
 
-Si ejecutas el script desde la terminal con:
+  Si ejecutas el script desde la terminal con:
 
-```bash
-python script.py argumento1 argumento2
+  ```bash
+  python script.py argumento1 argumento2
 
-```
+  ```
 
-- La salida será:
+  La salida será:
 
-```text
-['script.py', 'argumento1', 'argumento2']
-Argumento 1: argumento1
+  ```text
+  ['script.py', 'argumento1', 'argumento2']
+  Argumento 1: argumento1
 
-```
+  ```
 
 ---
 
 ## 1.8 Comandos Básicos Python
 
-- **python script.py:** Ejecuta el script Python.
-- **python -m py_compile script.py:** Compila el script Python a bytecode.
-- **python -m pdb script.py:** Ejecuta el script con el depurador.
-- **python -m venv myenv:** Crea un entorno virtual.
-- **pip install package_name:** Instala un paquete desde PyPI.
-- **pip freeze:** Lista las dependencias instaladas.
-- **python -m unittest test_module:** Ejecuta pruebas unitarias.
-- **python -m timeit -s "import module" "module.function()":** Mide el tiempo de ejecución de una expresión.
-- **python -m pydoc module:** Muestra la documentación del módulo.
+- `python script.py`: Ejecuta el script Python.
+- `python -m py_compile script.py`: Compila el script Python a bytecode.
+- `python -m pdb script.py`: Ejecuta el script con el depurador.
+- `python -m venv myenv`: Crea un entorno virtual.
+- `pip install package_name`: Instala un paquete desde PyPI.
+- `pip freeze`: Lista las dependencias instaladas.
+- `python -m unittest test_module`: Ejecuta pruebas unitarias.
+- `python -m timeit -s "import module" "module.function()"`: Mide el tiempo de ejecución de una expresión.
+- `python -m pydoc module`: Muestra la documentación del módulo.
