--- a/Python/Documentación/2.Operadores.md
+++ b/Python/Documentación/2.Operadores.md
@@ -1,102 +1,102 @@
 # 2. Operadores en Python
 
-## 2.1. Operadores Aritméticos
+- ## 2.1. Operadores Aritméticos
 
-- **Suma:** `+`
+  - **Suma:** `+`
 
-  - Ejemplo: `a + b`
+    - Ejemplo: `a + b`
 
-- **Resta:** `-`
+  - **Resta:** `-`
 
-  - Ejemplo: `a - b`
+    - Ejemplo: `a - b`
 
-- **Multiplicación:** `*`
+  - **Multiplicación:** `*`
 
-  - Ejemplo: `a * b`
+    - Ejemplo: `a * b`
 
-- **División:** `/`
+  - **División:** `/`
 
-  - Ejemplo: `a / b`
+    - Ejemplo: `a / b`
 
-- **División Entera (Floor Division):** `//`
+  - **División Entera (Floor Division):** `//`
 
-  - Ejemplo: `a // b`
+    - Ejemplo: `a // b`
 
-- **Módulo:** `%`
+  - **Módulo:** `%`
 
-  - Ejemplo: `a % b`
+    - Ejemplo: `a % b`
 
-- **Potencia:** `**`
-  - Ejemplo: `a ** b`
+  - **Potencia:** `**`
+    - Ejemplo: `a ** b`
 
-## 2.2. Operadores de Comparación
+- ## 2.2. Operadores de Comparación
 
-- **Igual a:** `==`
+  - **Igual a:** `==`
 
-  - Ejemplo: `a == b`
+    - Ejemplo: `a == b`
 
-- **Diferente a:** `!=`
+  - **Diferente a:** `!=`
 
-  - Ejemplo: `a != b`
+    - Ejemplo: `a != b`
 
-- **Mayor que:** `>`
+  - **Mayor que:** `>`
 
-  - Ejemplo: `a > b`
+    - Ejemplo: `a > b`
 
-- **Menor que:** `<`
+  - **Menor que:** `<`
 
-  - Ejemplo: `a < b`
+    - Ejemplo: `a < b`
 
-- **Mayor o igual que:** `>=`
+  - **Mayor o igual que:** `>=`
 
-  - Ejemplo: `a >= b`
+    - Ejemplo: `a >= b`
 
-- **Menor o igual que:** `<=`
-  - Ejemplo: `a <= b`
+  - **Menor o igual que:** `<=`
+    - Ejemplo: `a <= b`
 
-## 2.3. Operadores Lógicos
+- ## 2.3. Operadores Lógicos
 
-- **AND lógico:** `and`
+  - **AND lógico:** `and`
 
-  - Ejemplo: `c and d`
+    - Ejemplo: `c and d`
 
-- **OR lógico:** `or`
+  - **OR lógico:** `or`
 
-  - Ejemplo: `c or d`
+    - Ejemplo: `c or d`
 
-- **NOT lógico:** `not`
-  - Ejemplo: `not c`
+  - **NOT lógico:** `not`
+    - Ejemplo: `not c`
 
-## 2.4. Operadores Bit a Bit
+- ## 2.4. Operadores Bit a Bit
 
-- **AND bit a bit:** `&`
+  - **AND bit a bit:** `&`
 
-  - Ejemplo: `a & b`
+    - Ejemplo: `a & b`
 
-- **OR bit a bit:** `|`
+  - **OR bit a bit:** `|`
 
-  - Ejemplo: `a | b`
+    - Ejemplo: `a | b`
 
-- **XOR bit a bit:** `^`
+  - **XOR bit a bit:** `^`
 
-  - Ejemplo: `a ^ b`
+    - Ejemplo: `a ^ b`
 
-- **AND NOT bit a bit:** `~`
+  - **AND NOT bit a bit:** `~`
 
-  - Ejemplo: `~a`
+    - Ejemplo: `~a`
 
-- **Desplazamiento a la izquierda:** `<<`
+  - **Desplazamiento a la izquierda:** `<<`
 
-  - Ejemplo: `a << 1`
+    - Ejemplo: `a << 1`
 
-- **Desplazamiento a la derecha:** `>>`
-  - Ejemplo: `a >> 1`
+  - **Desplazamiento a la derecha:** `>>`
+    - Ejemplo: `a >> 1`
 
-## 2.5. Operadores de Asignación
+- ## 2.5. Operadores de Asignación
 
-- **Asignación simple:** `=`
+  - **Asignación simple:** `=`
 
-  - Ejemplo: `a = 5`
+    - Ejemplo: `a = 5`
 
-- **Asignación compuesta:** `+=`, `-=`, `*=`, `/=`, `%=`
-  - Ejemplo: `a += 5`
+  - **Asignación compuesta:** `+=`, `-=`, `*=`, `/=`, `%=`
+    - Ejemplo: `a += 5`
