--- a/Python/Documentación/3.EstructurasControl.md
+++ b/Python/Documentación/3.EstructurasControl.md
@@ -2,148 +2,148 @@
 
 ## 3.1. Condicionales
 
-### if
+- ### if
 
-Evalúa una condición y ejecuta el bloque de código si la condición es verdadera.
+  Evalúa una condición y ejecuta el bloque de código si la condición es verdadera.
 
-```py
-if x > 10:
-  print("x es mayor que 10")
+  ```py
+  if x > 10:
+    print("x es mayor que 10")
 
-```
+  ```
 
-### elif
+- ### elif
 
-Se usa junto con if para verificar múltiples condiciones.
+  Se usa junto con if para verificar múltiples condiciones.
 
-```py
-if x > 10:
-  print("x es mayor que 10")
-elif x == 10:
-  print("x es igual a 10")
+  ```py
+  if x > 10:
+    print("x es mayor que 10")
+  elif x == 10:
+    print("x es igual a 10")
 
-```
+  ```
 
-### else
+- ### else
 
-Se ejecuta si ninguna de las condiciones anteriores es verdadera.
+  Se ejecuta si ninguna de las condiciones anteriores es verdadera.
 
-```py
-if x > 10:
-  print("x es mayor que 10")
-else:
-  print("x es 10 o menor")
+  ```py
+  if x > 10:
+    print("x es mayor que 10")
+  else:
+    print("x es 10 o menor")
 
-```
+  ```
 
-### Switch
+- ### Switch
 
-Python no tiene un switch-case nativo, pero se puede usar un diccionario o la estructura match en Python 3.10+.
+  Python no tiene un switch-case nativo, pero se puede usar un diccionario o la estructura match en Python 3.10+.
 
-```py
-match day:
-case "Monday":
-    print("Inicio de la semana")
-case "Friday":
-    print("Fin de la semana laboral")
-case _:
-    print("Día normal")
+  ```py
+  match day:
+  case "Monday":
+      print("Inicio de la semana")
+  case "Friday":
+      print("Fin de la semana laboral")
+  case _:
+      print("Día normal")
 
-```
+  ```
 
 ---
 
 ## 3.3. Bucles
 
-### for
+- ### for
 
-El único bucle en Go. Puede actuar como un bucle for, while o do-while.
+  El único bucle en Go. Puede actuar como un bucle for, while o do-while.
 
-- **Bucle tradicional:**
+  - **Bucle tradicional:**
 
-```py
-for i in range(5):
-  print(i)
+    ```py
+    for i in range(5):
+      print(i)
 
-```
+    ```
 
-- **Bucle con condición (como while):**
+  - **Bucle con condición (como while):**
 
-```py
-i = 0
-while i < 5:
-  print(i)
-  i += 1
+    ```py
+    i = 0
+    while i < 5:
+      print(i)
+      i += 1
 
-```
+    ```
 
-- **Bucle infinito (como do-while)**
+  - **Bucle infinito (como do-while)**
 
-```py
-while True:
-  print("Bucle infinito")
-  break  # Salida del bucle
+    ```py
+    while True:
+      print("Bucle infinito")
+      break  # Salida del bucle
 
-```
+    ```
 
-### for in
+- ### for in
 
-Itera sobre elementos en una colección (listas, diccionarios, conjuntos, cadenas) y obtiene el elemento.
+  Itera sobre elementos en una colección (listas, diccionarios, conjuntos, cadenas) y obtiene el elemento.
 
-```py
-# Iterar sobre una lista
-nums = [1, 2, 3]
-for value in nums:
-    print(value)
+  ```py
+  # Iterar sobre una lista
+  nums = [1, 2, 3]
+  for value in nums:
+      print(value)
 
-# Iterar sobre un diccionario
-d = {'a': 1, 'b': 2}
-for key, value in d.items():
-    print(key, value)
+  # Iterar sobre un diccionario
+  d = {'a': 1, 'b': 2}
+  for key, value in d.items():
+      print(key, value)
 
-# Iterar sobre una cadena
-s = "hello"
-for char in s:
-    print(char)
+  # Iterar sobre una cadena
+  s = "hello"
+  for char in s:
+      print(char)
 
-```
+  ```
 
 ## 3.4. Control de Flujo
 
-### break
+- ### break
 
-Sale de un bucle.
+  Sale de un bucle.
 
-```py
-for i in range(10):
-  if i == 5:
-      break
-  print(i)
+  ```py
+  for i in range(10):
+    if i == 5:
+        break
+    print(i)
 
-```
+  ```
 
-### continue
+- ### continue
 
-Omite el resto del código en el bucle actual y pasa a la siguiente iteración.
+  Omite el resto del código en el bucle actual y pasa a la siguiente iteración.
 
-```py
-for i in range(10):
-  if i % 2 == 0:
-      continue
-  print(i)
+  ```py
+  for i in range(10):
+    if i % 2 == 0:
+        continue
+    print(i)
 
-```
+  ```
 
-### return
+- ### return
 
-Sale de una función y opcionalmente devuelve un valor.
+  Sale de una función y opcionalmente devuelve un valor.
 
-```py
-def add(a, b):
-  return a + b
+  ```py
+  def add(a, b):
+    return a + b
 
-```
+  ```
 
-### goto
+- ### goto
 
-Python no tiene un goto nativo. Para saltar a ciertas partes del código, generalmente se usan funciones, excepciones o estructuras de control como bucles y condicionales.
+  Python no tiene un goto nativo. Para saltar a ciertas partes del código, generalmente se usan funciones, excepciones o estructuras de control como bucles y condicionales.
