--- a/Python/Documentación/4.Funciones&Procedimientos.md
+++ b/Python/Documentación/4.Funciones&Procedimientos.md
@@ -2,78 +2,78 @@
 
 ## 4.1. Definición de Funciones
 
-### Definición de una función
+- ### Definición de una función
 
-Se utiliza la palabra clave def, seguida del nombre de la función, parámetros y el cuerpo de la función.
+  Se utiliza la palabra clave def, seguida del nombre de la función, parámetros y el cuerpo de la función.
 
-```py
-def nombre_funcion(param1, param2):
+  ```py
+  def nombre_funcion(param1, param2):
   # Cuerpo de la función
   pass
 
-```
+  ```
 
-### Parámetros
+- ### Parámetros
 
-Los parámetros se definen entre paréntesis y pueden ser múltiples.
+  Los parámetros se definen entre paréntesis y pueden ser múltiples.
 
-```py
-def suma(a, b):
+  ```py
+  def suma(a, b):
   return a + b
 
-```
+  ```
 
-### Tipos de retorno
+- ### Tipos de retorno
 
-Una función puede retornar uno o varios valores.
+  Una función puede retornar uno o varios valores.
 
-```py
-def operaciones(a, b):
+  ```py
+  def operaciones(a, b):
   suma = a + b
   resta = a - b
   return suma, resta
 
-```
+  ```
 
-### Valores por defecto
+- ### Valores por defecto
 
-Python soporta valores por defecto para parámetros.
+  Python soporta valores por defecto para parámetros.
 
-```py
-def greet(name="Invitado"):
+  ```py
+  def greet(name="Invitado"):
   return f"Hola, {name}"
 
-```
+  ```
 
 ---
 
 ## 4.2. Ámbito de Funciones
 
-### Alcance local y global
+- ### Alcance local y global
 
-- **Local:** Las variables declaradas dentro de una función solo son accesibles dentro de esa función.
-- **Global:** Las variables declaradas fuera de una función son accesibles en cualquier parte del archivo (y en otros archivos si se exportan).
+  - **Local:** Las variables declaradas dentro de una función solo son accesibles dentro de esa función.
+  - **Global:** Las variables declaradas fuera de una función son accesibles en cualquier parte del archivo (y en otros archivos si se exportan).
 
-  ```py
-  global_var = 10  # Variable global
+    ```py
+    global_var = 10  # Variable global
 
-  def ejemplo():
-      local_var = 5  # Variable local
-      print(global_var)  # Acceso a variable global
+    def ejemplo():
+        local_var = 5  # Variable local
+        print(global_var)  # Acceso a variable global
 
-  ```
+    ```
 
-### Variables estáticas
+- ### Variables estáticas
 
-Python no tiene variables estáticas en el sentido tradicional. Sin embargo, se puede usar variables globales o técnicas como las funciones de cierre (closures) para mantener el estado.
+  Python no tiene variables estáticas en el sentido tradicional. Sin embargo, se puede usar variables globales o técnicas como las funciones de cierre (closures) para mantener el estado.
 
 ---
 
 ## 4.3. Valor y Referencia
 
-### Paso por valor
+- ### Paso por valor
 
-- Python pasa los parámetros por referencia de objeto, lo que significa que los cambios en un objeto mutable dentro de la función afectan el objeto original.
+  Python pasa los parámetros por referencia de objeto, lo que significa que los cambios en un objeto mutable dentro de la función afectan el objeto original.
 
   ```py
   def incrementar(valor):
@@ -85,7 +85,7 @@ Python no tiene variables estáticas en el sentido tradicional. Sin embargo, se 
 
   ```
 
-- Para tipos inmutables como números y cadenas, el comportamiento es similar al paso por valor.
+  Para tipos inmutables como números y cadenas, el comportamiento es similar al paso por valor.
 
   ```py
   def incrementar(valor):
@@ -128,30 +128,30 @@ def suma_float(a, b):
 
 ## 4.6. Funciones Anónimas (Lambda)
 
-### Funciones anónimas
+- ### Funciones anónimas
 
-Las funciones anónimas, también conocidas como lambdas, son funciones sin nombre. Se utilizan para definir funciones inline.
+  Las funciones anónimas, también conocidas como lambdas, son funciones sin nombre. Se utilizan para definir funciones inline.
 
-```py
-suma = lambda a, b: a + b
-print(suma(3, 4))  # Output: 7
+  ```py
+  suma = lambda a, b: a + b
+  print(suma(3, 4))  # Output: 7
 
-```
+  ```
 
-### Closures
+- ### Closures
 
-Un closure es una función anónima que captura y puede modificar variables de su entorno.
+  Un closure es una función anónima que captura y puede modificar variables de su entorno.
 
-```go
-def contador():
+  ```go
+  def contador():
   i = 0
   return lambda: (i := i + 1)
 
-c = contador()
-print(c())  # Output: 1
-print(c())  # Output: 2
+  c = contador()
+  print(c())  # Output: 1
+  print(c())  # Output: 2
 
-```
+  ```
 
 ---
 
@@ -233,49 +233,49 @@ def main():
 
 ## 4.11. Iteradores e Iterables
 
-### Iterables
+- ### Iterables
 
-Un iterable es cualquier objeto en Python que puede ser iterado. Los ejemplos más comunes son listas, tuplas, diccionarios y conjuntos.
+  Un iterable es cualquier objeto en Python que puede ser iterado. Los ejemplos más comunes son listas, tuplas, diccionarios y conjuntos.
 
-```py
-lista = [1, 2, 3, 4]
-for elemento in lista:
-    print(elemento)
+  ```py
+  lista = [1, 2, 3, 4]
+  for elemento in lista:
+      print(elemento)
 
-```
+  ```
 
-### Iteradores
+- ### Iteradores
 
-Un iterador es un objeto que implementa los métodos `__iter__()` y `__next__()`. Los iteradores permiten recorrer los elementos de un iterable.
+  Un iterador es un objeto que implementa los métodos `__iter__()` y `__next__()`. Los iteradores permiten recorrer los elementos de un iterable.
 
-```py
-numeros = iter([1, 2, 3, 4])
-print(next(numeros))  # Output: 1
-print(next(numeros))  # Output: 2
+  ```py
+  numeros = iter([1, 2, 3, 4])
+  print(next(numeros))  # Output: 1
+  print(next(numeros))  # Output: 2
 
-```
+  ```
 
-### Iterar con zip
+- ### Iterar con zip
 
-La función zip combina varios iterables en tuplas.
+  La función zip combina varios iterables en tuplas.
 
-```py
-nombres = ["Ana", "Luis", "Juan"]
-edades = [25, 30, 22]
+  ```py
+  nombres = ["Ana", "Luis", "Juan"]
+  edades = [25, 30, 22]
 
-for nombre, edad in zip(nombres, edades):
-    print(f"{nombre} tiene {edad} años")
+  for nombre, edad in zip(nombres, edades):
+      print(f"{nombre} tiene {edad} años")
 
-```
+  ```
 
-### Iterar con enumerate
+- ### Iterar con enumerate
 
-La función enumerate añade un índice a cada elemento del iterable.
+  La función enumerate añade un índice a cada elemento del iterable.
 
-```py
-frutas = ["manzana", "banana", "cereza"]
+  ```py
+  frutas = ["manzana", "banana", "cereza"]
 
-for indice, fruta in enumerate(frutas):
-    print(f"Índice {indice}: {fruta}")
+  for indice, fruta in enumerate(frutas):
+      print(f"Índice {indice}: {fruta}")
 
-```
+  ```
