--- a/Go/Documentación/19.HerramientasDesarrollo.md
+++ b/Go/Documentación/19.HerramientasDesarrollo.md
@@ -4,38 +4,38 @@ En el desarrollo de software en Go, existen varias herramientas y prácticas que
 
 ## 19.1. Control de Versiones
 
-- **Git:**
+- ### Git
 
   Git es el sistema de control de versiones distribuido más utilizado. Permite a los desarrolladores realizar un seguimiento de los cambios en el código fuente y colaborar en proyectos de manera eficiente.
 
-- ### Comandos Básicos Git
+  - **Comandos Básicos Git**
 
-  - **git init:** Inicializa un nuevo repositorio Git.
-  - **git clone [url]:** Clona un repositorio existente.
-  - **git add [file]:** Agrega archivos al área de preparación (staging area).
-  - **git commit -m "message":** Realiza un commit con un mensaje descriptivo.
-  - **git push origin [branch]:** Envía los cambios al repositorio remoto.
-  - **git pull origin [branch]:** Actualiza el repositorio local con los cambios del remoto.
+    - `git init`: Inicializa un nuevo repositorio Git.
+    - `git clone [url]`: Clona un repositorio existente.
+    - `git add [file]`: Agrega archivos al área de preparación (staging area).
+    - `git commit -m "message"`: Realiza un commit con un mensaje descriptivo.
+    - `git push origin [branch]`: Envía los cambios al repositorio remoto.
+    - `git pull origin [branch]`: Actualiza el repositorio local con los cambios del remoto.
 
-### Plataformas
+- ### Plataformas
 
-- **GitHub:** Plataforma para alojar repositorios Git y colaborar en proyectos. Ofrece características como pull requests, issues y CI/CD integrados.
-- **GitLab:** Similar a GitHub, proporciona alojamiento de repositorios, integración continua (CI/CD) y una serie de herramientas de gestión de proyectos.
+  - **GitHub:** Plataforma para alojar repositorios Git y colaborar en proyectos. Ofrece características como pull requests, issues y CI/CD integrados.
+  - **GitLab:** Similar a GitHub, proporciona alojamiento de repositorios, integración continua (CI/CD) y una serie de herramientas de gestión de proyectos.
 
 ---
 
 ## 19.2. CI/CD
 
-### Integración Continua (CI)
+- ### Integración Continua (CI)
 
-CI es la práctica de fusionar todas las copias de trabajo de un proyecto en un repositorio compartido con frecuencia. Herramientas de CI ayudan a automatizar el proceso de construcción y pruebas del software.
+  CI es la práctica de fusionar todas las copias de trabajo de un proyecto en un repositorio compartido con frecuencia. Herramientas de CI ayudan a automatizar el proceso de construcción y pruebas del software.
 
-- **GitHub Actions:** Herramienta de CI/CD integrada en GitHub que permite automatizar flujos de trabajo.
-- **GitLab CI/CD:** Ofrece una solución completa de integración continua y despliegue continuo integrada en GitLab.
-- **CircleCI:** Herramienta de CI/CD que se integra con GitHub y Bitbucket.
-- **Jenkins:** Herramienta de automatización extensible y de código abierto, utilizada para automatizar tareas relacionadas con la integración y entrega continua.
+  - **GitHub Actions:** Herramienta de CI/CD integrada en GitHub que permite automatizar flujos de trabajo.
+  - **GitLab CI/CD:** Ofrece una solución completa de integración continua y despliegue continuo integrada en GitLab.
+  - **CircleCI:** Herramienta de CI/CD que se integra con GitHub y Bitbucket.
+  - **Jenkins:** Herramienta de automatización extensible y de código abierto, utilizada para automatizar tareas relacionadas con la integración y entrega continua.
 
-- Ejemplo básico de configuración en .github/workflows/ci.yml:
+- **Ejemplo básico de configuración en `.github/workflows/ci.yml`:**
 
   ```yaml
   name: CI
@@ -62,121 +62,121 @@ CI es la práctica de fusionar todas las copias de trabajo de un proyecto en un 
           run: go test -v ./...
   ```
 
-### Despliegue Continuo (CD)
+- ### Despliegue Continuo (CD)
 
-CD es la práctica de automatizar el proceso de entrega del software para que se pueda desplegar en producción o en entornos de staging con frecuencia. Esto permite detectar errores rápidamente y reducir el riesgo asociado a los despliegues.
+  CD es la práctica de automatizar el proceso de entrega del software para que se pueda desplegar en producción o en entornos de staging con frecuencia. Esto permite detectar errores rápidamente y reducir el riesgo asociado a los despliegues.
 
-- **Jenkins:** Además de CI, Jenkins es ampliamente utilizado para implementar CD a través de pipelines personalizados.
-- **GitLab CD:** También proporciona funciones de CD junto con CI, lo que permite el despliegue automático en servidores o contenedores.
-- **Kubernetes:** A menudo se usa en combinación con Jenkins o GitLab CD para automatizar el despliegue de aplicaciones en entornos de contenedores.
-- **Docker:** Herramienta clave para empaquetar aplicaciones y sus dependencias en contenedores, facilitando el despliegue y la portabilidad.
+  - **Jenkins:** Además de CI, Jenkins es ampliamente utilizado para implementar CD a través de pipelines personalizados.
+  - **GitLab CD:** También proporciona funciones de CD junto con CI, lo que permite el despliegue automático en servidores o contenedores.
+  - **Kubernetes:** A menudo se usa en combinación con Jenkins o GitLab CD para automatizar el despliegue de aplicaciones en entornos de contenedores.
+  - **Docker:** Herramienta clave para empaquetar aplicaciones y sus dependencias en contenedores, facilitando el despliegue y la portabilidad.
 
 ---
 
 ## 19.3. Gestión de Dependencias
 
-### Go Modules (`go mod`)
+- ### Go Modules (`go mod`)
 
-Go Modules es el sistema de gestión de dependencias integrado en Go desde la versión 1.11. Permite a los desarrolladores definir y gestionar las dependencias del proyecto de manera eficiente.
+  Go Modules es el sistema de gestión de dependencias integrado en Go desde la versión 1.11. Permite a los desarrolladores definir y gestionar las dependencias del proyecto de manera eficiente.
 
-### Comandos Básicos go mod
+- **Comandos Básicos go mod**
 
-- **go mod init [module-path]:** Inicializa un nuevo módulo Go.
-- **go mod tidy:** Limpia el archivo go.mod eliminando dependencias no usadas y agregando las necesarias.
-- **go get [package]:** Agrega o actualiza una dependencia en el módulo.
+  - `go mod init [module-path]`: Inicializa un nuevo módulo Go.
+  - `go mod tidy`: Limpia el archivo go.mod eliminando dependencias no usadas y agregando las necesarias.
+  - `go get [package]`: Agrega o actualiza una dependencia en el módulo.
 
-- Ejemplo de archivo go.mod:
+- **Ejemplo de archivo go.mod:**
 
-```go
-module myapp
+  ```go
+  module myapp
 
-go 1.20
+  go 1.20
 
-require (
-    github.com/gin-gonic/gin v1.8.1
-    github.com/sirupsen/logrus v1.9.2
-)
+  require (
+      github.com/gin-gonic/gin v1.8.1
+      github.com/sirupsen/logrus v1.9.2
+  )
 
-```
+  ```
 
 ---
 
 ## 19.4. Automatización de Tareas
 
-### Makefile
+- ### Makefile
 
-Los Makefiles son archivos de configuración para la herramienta make, que permite automatizar tareas repetitivas como la construcción de software, pruebas y despliegues.
+  Los Makefiles son archivos de configuración para la herramienta make, que permite automatizar tareas repetitivas como la construcción de software, pruebas y despliegues.
 
-- Ejemplo de un Makefile para un proyecto Go:
+  - **Ejemplo de un `Makefile` para un proyecto Go:**
 
-```makefile
-.PHONY: build test clean
+    ```makefile
+    .PHONY: build test clean
 
-build:
+    build:
+        go build -o myapp main.go
+
+    test:
+        go test -v ./...
+
+    clean:
+        rm -f myapp
+
+    ```
+
+  - `make build`: Compila el proyecto.
+  - `make test`: Ejecuta las pruebas.
+  - `make clean`: Limpia los archivos generados.
+
+- ### Scripts en Bash, PowerShell o Python
+
+  Puedes usar scripts para automatizar tareas personalizadas. En un entorno Unix, puedes escribir scripts en Bash, mientras que en Windows, puedes usar PowerShell.
+
+  - **Ejemplo de script Bash (build.sh):**
+
+    ```bash
+    #!/bin/bash
+    echo "Building the project..."
     go build -o myapp main.go
 
-test:
+    echo "Running tests..."
     go test -v ./...
 
-clean:
-    rm -f myapp
+    echo "Build and tests complete."
 
-```
+    ```
 
-- **make build:** Compila el proyecto.
-- **make test:** Ejecuta las pruebas.
-- **make clean:** Limpia los archivos generados.
+  - **Ejemplo de script PowerShell (build.ps1):**
 
-### Scripts en Bash, PowerShell o Python
+    ```powershell
+    Write-Output "Building the project..."
+    go build -o myapp main.go
 
-Puedes usar scripts para automatizar tareas personalizadas. En un entorno Unix, puedes escribir scripts en Bash, mientras que en Windows, puedes usar PowerShell.
+    Write-Output "Running tests..."
+    go test -v ./...
 
-- Ejemplo de script Bash (build.sh):
+    Write-Output "Build and tests complete."
 
-```bash
-#!/bin/bash
-echo "Building the project..."
-go build -o myapp main.go
+    ```
 
-echo "Running tests..."
-go test -v ./...
+  - **Ejemplo de script Python:**
 
-echo "Build and tests complete."
+    ```py
+    import subprocess
 
-```
+    def run_command(command):
+        process = subprocess.Popen(command, shell=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE)
+        output, error = process.communicate()
+        if error:
+            print(f"Error running command: {command}\n{error.decode('utf-8')}")
+        else:
+            print(output.decode('utf-8'))
 
-- Ejemplo de script PowerShell (build.ps1):
+    print("Building the project...")
+    run_command("go build -o myapp main.go")
 
-```powershell
-Write-Output "Building the project..."
-go build -o myapp main.go
+    print("Running tests...")
+    run_command("go test -v ./...")
 
-Write-Output "Running tests..."
-go test -v ./...
+    print("Build and tests complete.")
 
-Write-Output "Build and tests complete."
-
-```
-
-- Ejemplo de script Python:
-
-```py
-import subprocess
-
-def run_command(command):
-    process = subprocess.Popen(command, shell=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE)
-    output, error = process.communicate()
-    if error:
-        print(f"Error running command: {command}\n{error.decode('utf-8')}")
-    else:
-        print(output.decode('utf-8'))
-
-print("Building the project...")
-run_command("go build -o myapp main.go")
-
-print("Running tests...")
-run_command("go test -v ./...")
-
-print("Build and tests complete.")
-
-```
+    ```
