--- a/Go/Documentación/25.ManejoImagenes.md
+++ b/Go/Documentación/25.ManejoImagenes.md
@@ -39,124 +39,124 @@ func main() {
 
 Para manipular imágenes, como redimensionar o aplicar filtros, puedes usar el paquete `image` junto con `image/draw` y `image/color`.
 
-### Redimensionar una Imagen
+- ### Redimensionar una Imagen
 
-Para redimensionar una imagen, puedes usar una biblioteca externa como `github.com/nfnt/resize`:
+  Para redimensionar una imagen, puedes usar una biblioteca externa como `github.com/nfnt/resize`:
 
-```go
-package main
+  ```go
+  package main
 
-import (
-    "fmt"
-    "image"
-    "image/jpeg"
-    "os"
+  import (
+      "fmt"
+      "image"
+      "image/jpeg"
+      "os"
 
-    "github.com/nfnt/resize"
-)
+      "github.com/nfnt/resize"
+  )
 
-func main() {
-    file, err := os.Open("imagen.jpg")
-    if err != nil {
-        fmt.Println("Error al abrir la imagen:", err)
-        return
-    }
-    defer file.Close()
+  func main() {
+      file, err := os.Open("imagen.jpg")
+      if err != nil {
+          fmt.Println("Error al abrir la imagen:", err)
+          return
+      }
+      defer file.Close()
 
-    img, _, err := image.Decode(file)
-    if err != nil {
-        fmt.Println("Error al decodificar la imagen:", err)
-        return
-    }
+      img, _, err := image.Decode(file)
+      if err != nil {
+          fmt.Println("Error al decodificar la imagen:", err)
+          return
+      }
 
-    // Redimensionar imagen
-    newImg := resize.Resize(800, 0, img, resize.Lanczos3)
+      // Redimensionar imagen
+      newImg := resize.Resize(800, 0, img, resize.Lanczos3)
 
-    outFile, err := os.Create("imagen_redimensionada.jpg")
-    if err != nil {
-        fmt.Println("Error al crear el archivo de imagen:", err)
-        return
-    }
-    defer outFile.Close()
+      outFile, err := os.Create("imagen_redimensionada.jpg")
+      if err != nil {
+          fmt.Println("Error al crear el archivo de imagen:", err)
+          return
+      }
+      defer outFile.Close()
 
-    err = jpeg.Encode(outFile, newImg, nil)
-    if err != nil {
-        fmt.Println("Error al guardar la imagen:", err)
-        return
-    }
+      err = jpeg.Encode(outFile, newImg, nil)
+      if err != nil {
+          fmt.Println("Error al guardar la imagen:", err)
+          return
+      }
 
-    fmt.Println("Imagen redimensionada y guardada con éxito")
-}
+      fmt.Println("Imagen redimensionada y guardada con éxito")
+  }
 
-```
+  ```
 
-### Aplicar un Filtro de Color
+- ### Aplicar un Filtro de Color
 
-```go
-package main
+  ```go
+  package main
 
-import (
-    "fmt"
-    "image"
-    "image/color"
-    "image/draw"
-    "image/jpeg"
-    "os"
-)
+  import (
+      "fmt"
+      "image"
+      "image/color"
+      "image/draw"
+      "image/jpeg"
+      "os"
+  )
 
-func main() {
-    file, err := os.Open("imagen.jpg")
-    if err != nil {
-        fmt.Println("Error al abrir la imagen:", err)
-        return
-    }
-    defer file.Close()
+  func main() {
+      file, err := os.Open("imagen.jpg")
+      if err != nil {
+          fmt.Println("Error al abrir la imagen:", err)
+          return
+      }
+      defer file.Close()
 
-    img, _, err := image.Decode(file)
-    if err != nil {
-        fmt.Println("Error al decodificar la imagen:", err)
-        return
-    }
+      img, _, err := image.Decode(file)
+      if err != nil {
+          fmt.Println("Error al decodificar la imagen:", err)
+          return
+      }
 
-    bounds := img.Bounds()
-    newImg := image.NewRGBA(bounds)
+      bounds := img.Bounds()
+      newImg := image.NewRGBA(bounds)
 
-    draw.Draw(newImg, bounds, img, bounds.Min, draw.Over)
+      draw.Draw(newImg, bounds, img, bounds.Min, draw.Over)
 
-    // Aplicar filtro de color
-    for y := bounds.Min.Y; y < bounds.Max.Y; y++ {
-        for x := bounds.Min.X; x < bounds.Max.X; x++ {
-            r, g, b, a := newImg.At(x, y).RGBA()
-            newColor := color.RGBA{
-                R: uint8(r >> 8),
-                G: uint8(g >> 8),
-                B: uint8(b >> 8),
-                A: uint8(a >> 8),
-            }
-            newColor.R = 255 - newColor.R
-            newColor.G = 255 - newColor.G
-            newColor.B = 255 - newColor.B
-            newImg.Set(x, y, newColor)
-        }
-    }
+      // Aplicar filtro de color
+      for y := bounds.Min.Y; y < bounds.Max.Y; y++ {
+          for x := bounds.Min.X; x < bounds.Max.X; x++ {
+              r, g, b, a := newImg.At(x, y).RGBA()
+              newColor := color.RGBA{
+                  R: uint8(r >> 8),
+                  G: uint8(g >> 8),
+                  B: uint8(b >> 8),
+                  A: uint8(a >> 8),
+              }
+              newColor.R = 255 - newColor.R
+              newColor.G = 255 - newColor.G
+              newColor.B = 255 - newColor.B
+              newImg.Set(x, y, newColor)
+          }
+      }
 
-    outFile, err := os.Create("imagen_filtrada.jpg")
-    if err != nil {
-        fmt.Println("Error al crear el archivo de imagen:", err)
-        return
-    }
-    defer outFile.Close()
+      outFile, err := os.Create("imagen_filtrada.jpg")
+      if err != nil {
+          fmt.Println("Error al crear el archivo de imagen:", err)
+          return
+      }
+      defer outFile.Close()
 
-    err = jpeg.Encode(outFile, newImg, nil)
-    if err != nil {
-        fmt.Println("Error al guardar la imagen:", err)
-        return
-    }
+      err = jpeg.Encode(outFile, newImg, nil)
+      if err != nil {
+          fmt.Println("Error al guardar la imagen:", err)
+          return
+      }
 
-    fmt.Println("Imagen filtrada y guardada con éxito")
-}
+      fmt.Println("Imagen filtrada y guardada con éxito")
+  }
 
-```
+  ```
 
 ---
 
@@ -164,49 +164,49 @@ func main() {
 
 Puedes crear imágenes desde cero utilizando el paquete `image`.
 
-### Crear una Imagen de Color Sólido
+- ### Crear una Imagen de Color Sólido
 
-```go
-package main
+  ```go
+  package main
 
-import (
-    "fmt"
-    "image"
-    "image/color"
-    "image/jpeg"
-    "os"
-)
+  import (
+      "fmt"
+      "image"
+      "image/color"
+      "image/jpeg"
+      "os"
+  )
 
-func main() {
-    width := 100
-    height := 100
-    img := image.NewRGBA(image.Rect(0, 0, width, height))
+  func main() {
+      width := 100
+      height := 100
+      img := image.NewRGBA(image.Rect(0, 0, width, height))
 
-    // Rellenar la imagen con un color sólido
-    red := color.RGBA{255, 0, 0, 255}
-    for y := 0; y < height; y++ {
-        for x := 0; x < width; x++ {
-            img.Set(x, y, red)
-        }
-    }
+      // Rellenar la imagen con un color sólido
+      red := color.RGBA{255, 0, 0, 255}
+      for y := 0; y < height; y++ {
+          for x := 0; x < width; x++ {
+              img.Set(x, y, red)
+          }
+      }
 
-    outFile, err := os.Create("imagen_solid_color.jpg")
-    if err != nil {
-        fmt.Println("Error al crear el archivo de imagen:", err)
-        return
-    }
-    defer outFile.Close()
+      outFile, err := os.Create("imagen_solid_color.jpg")
+      if err != nil {
+          fmt.Println("Error al crear el archivo de imagen:", err)
+          return
+      }
+      defer outFile.Close()
 
-    err = jpeg.Encode(outFile, img, nil)
-    if err != nil {
-        fmt.Println("Error al guardar la imagen:", err)
-        return
-    }
+      err = jpeg.Encode(outFile, img, nil)
+      if err != nil {
+          fmt.Println("Error al guardar la imagen:", err)
+          return
+      }
 
-    fmt.Println("Imagen de color sólido creada y guardada con éxito")
-}
+      fmt.Println("Imagen de color sólido creada y guardada con éxito")
+  }
 
-```
+  ```
 
 ---
 
@@ -214,47 +214,47 @@ func main() {
 
 Puedes convertir imágenes entre diferentes formatos usando el paquete `image` y sus subpaquetes:
 
-### Convertir de PNG a JPEG
+- ### Convertir de PNG a JPEG
 
-```go
-package main
+  ```go
+  package main
 
-import (
-    "fmt"
-    "image"
-    "image/jpeg"
-    "image/png"
-    "os"
-)
+  import (
+      "fmt"
+      "image"
+      "image/jpeg"
+      "image/png"
+      "os"
+  )
 
-func main() {
-    file, err := os.Open("imagen.png")
-    if err != nil {
-        fmt.Println("Error al abrir la imagen PNG:", err)
-        return
-    }
-    defer file.Close()
+  func main() {
+      file, err := os.Open("imagen.png")
+      if err != nil {
+          fmt.Println("Error al abrir la imagen PNG:", err)
+          return
+      }
+      defer file.Close()
 
-    img, _, err := image.Decode(file)
-    if err != nil {
-        fmt.Println("Error al decodificar la imagen:", err)
-        return
-    }
+      img, _, err := image.Decode(file)
+      if err != nil {
+          fmt.Println("Error al decodificar la imagen:", err)
+          return
+      }
 
-    outFile, err := os.Create("imagen_convertida.jpg")
-    if err != nil {
-        fmt.Println("Error al crear el archivo JPEG:", err)
-        return
-    }
-    defer outFile.Close()
+      outFile, err := os.Create("imagen_convertida.jpg")
+      if err != nil {
+          fmt.Println("Error al crear el archivo JPEG:", err)
+          return
+      }
+      defer outFile.Close()
 
-    err = jpeg.Encode(outFile, img, nil)
-    if err != nil {
-        fmt.Println("Error al guardar la imagen:", err)
-        return
-    }
+      err = jpeg.Encode(outFile, img, nil)
+      if err != nil {
+          fmt.Println("Error al guardar la imagen:", err)
+          return
+      }
 
-    fmt.Println("Imagen convertida a JPEG y guardada con éxito")
-}
+      fmt.Println("Imagen convertida a JPEG y guardada con éxito")
+  }
 
-```
+  ```
