--- a/Python/Documentación/5.EstructurasDatos.md
+++ b/Python/Documentación/5.EstructurasDatos.md
@@ -4,26 +4,26 @@
 
 Las listas en Python son colecciones ordenadas y mutables que pueden contener elementos de diferentes tipos.
 
-### Listas básicas
+- ### Listas básicas
 
-Se pueden implementar utilizando listas de Python.
+  Se pueden implementar utilizando listas de Python.
 
-```py
-lista = [1, 2, 3, 4, 5]  # Lista de enteros
-lista.append(6)          # Agregar un elemento al final
-print(lista)             # [1, 2, 3, 4, 5, 6]
+  ```py
+  lista = [1, 2, 3, 4, 5]  # Lista de enteros
+  lista.append(6)          # Agregar un elemento al final
+  print(lista)             # [1, 2, 3, 4, 5, 6]
 
-```
+  ```
 
-### Listas anidadas
+- ### Listas anidadas
 
-También con listas, pero anidadas.
+  También con listas, pero anidadas.
 
-```py
-matriz = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]  # Matriz 3x3
-print(matriz[0][1])                          # 2
+  ```py
+  matriz = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]  # Matriz 3x3
+  print(matriz[0][1])                          # 2
 
-```
+  ```
 
 ---
 
@@ -31,21 +31,21 @@ print(matriz[0][1])                          # 2
 
 Las tuplas son colecciones ordenadas e inmutables de elementos.
 
-### Tuplas básicas
+- ### Tuplas básicas
 
-```py
-tupla = (1, 2, 3)        # Tupla de enteros
-print(tupla[0])          # 1
+  ```py
+  tupla = (1, 2, 3)        # Tupla de enteros
+  print(tupla[0])          # 1
 
-```
+  ```
 
-### Tuplas anidadas
+- ### Tuplas anidadas
 
-```py
-tupla_anidada = ((1, 2), (3, 4))  # Tupla con tuplas anidadas
-print(tupla_anidada[1][0])       # 3
+  ```py
+  tupla_anidada = ((1, 2), (3, 4))  # Tupla con tuplas anidadas
+  print(tupla_anidada[1][0])       # 3
 
-```
+  ```
 
 ---
 
@@ -53,23 +53,23 @@ print(tupla_anidada[1][0])       # 3
 
 Los diccionarios son colecciones desordenadas de pares clave-valor donde las claves deben ser únicas.
 
-### Diccionario básico
+- ### Diccionario básico
 
-```py
-diccionario = {'clave': 10, 'otra_clave': 20}
-valor = diccionario['clave']
-print(valor)  # 10
+  ```py
+  diccionario = {'clave': 10, 'otra_clave': 20}
+  valor = diccionario['clave']
+  print(valor)  # 10
 
-```
+  ```
 
-### Diccionario con valores múltiples
+- ### Diccionario con valores múltiples
 
-```py
-diccionario = {'clave1': [1, 2], 'clave2': [3, 4]}
-diccionario['clave1'].append(3)
-print(diccionario)  # {'clave1': [1, 2, 3], 'clave2': [3, 4]}
+  ```py
+  diccionario = {'clave1': [1, 2], 'clave2': [3, 4]}
+  diccionario['clave1'].append(3)
+  print(diccionario)  # {'clave1': [1, 2, 3], 'clave2': [3, 4]}
 
-```
+  ```
 
 ---
 
@@ -77,30 +77,30 @@ print(diccionario)  # {'clave1': [1, 2, 3], 'clave2': [3, 4]}
 
 Las pilas siguen el principio Last In, First Out (LIFO).
 
-### Implementación con listas
+- ### Implementación con listas
 
-```py
-class Pila:
-    def __init__(self):
-        self.elementos = []
+  ```py
+  class Pila:
+      def __init__(self):
+          self.elementos = []
 
-    def apilar(self, valor):
-        self.elementos.append(valor)
+      def apilar(self, valor):
+          self.elementos.append(valor)
 
-    def desapilar(self):
-        if not self.esta_vacia():
-            return self.elementos.pop()
-        return None  # O manejar el error
+      def desapilar(self):
+          if not self.esta_vacia():
+              return self.elementos.pop()
+          return None  # O manejar el error
 
-    def cima(self):
-        if not self.esta_vacia():
-            return self.elementos[-1]
-        return None  # O manejar el error
+      def cima(self):
+          if not self.esta_vacia():
+              return self.elementos[-1]
+          return None  # O manejar el error
 
-    def esta_vacia(self):
-        return len(self.elementos) == 0
+      def esta_vacia(self):
+          return len(self.elementos) == 0
 
-```
+  ```
 
 ---
 
@@ -108,51 +108,51 @@ class Pila:
 
 Las colas siguen el principio First In, First Out (FIFO).
 
-### Colas simples
+- ### Colas simples
 
-```py
-from collections import deque
+  ```py
+  from collections import deque
 
-cola = deque()
-cola.append(1)  # Encolar
-cola.append(2)
-valor = cola.popleft()  # Desencolar
-print(valor)  # 1
+  cola = deque()
+  cola.append(1)  # Encolar
+  cola.append(2)
+  valor = cola.popleft()  # Desencolar
+  print(valor)  # 1
 
-```
+  ```
 
-### Colas dobles (Deque)
+- ### Colas dobles (Deque)
 
-```py
-deque = deque()
-deque.appendleft(1)  # Encolar al frente
-deque.append(2)      # Encolar al final
-print(deque.popleft())  # 1
-print(deque.pop())      # 2
+  ```py
+  deque = deque()
+  deque.appendleft(1)  # Encolar al frente
+  deque.append(2)      # Encolar al final
+  print(deque.popleft())  # 1
+  print(deque.pop())      # 2
 
-```
+  ```
 
-### Colas de prioridad
+- ### Colas de prioridad
 
-```py
-import heapq
+  ```py
+  import heapq
 
-class ColaPrioridad:
-    def __init__(self):
-        self.heap = []
+  class ColaPrioridad:
+      def __init__(self):
+          self.heap = []
 
-    def encolar(self, prioridad, valor):
-        heapq.heappush(self.heap, (prioridad, valor))
+      def encolar(self, prioridad, valor):
+          heapq.heappush(self.heap, (prioridad, valor))
 
-    def desencolar(self):
-        if not self.esta_vacia():
-            return heapq.heappop(self.heap)
-        return None  # O manejar el error
+      def desencolar(self):
+          if not self.esta_vacia():
+              return heapq.heappop(self.heap)
+          return None  # O manejar el error
 
-    def esta_vacia(self):
-        return len(self.heap) == 0
+      def esta_vacia(self):
+          return len(self.heap) == 0
 
-```
+  ```
 
 ---
 
@@ -160,81 +160,81 @@ class ColaPrioridad:
 
 Una lista enlazada se puede implementar usando clases para nodos y punteros.
 
-### Listas enlazadas simples
+- ### Listas enlazadas simples
 
-```py
-class Nodo:
-    def __init__(self, valor=None):
-        self.valor = valor
-        self.siguiente = None
+  ```py
+  class Nodo:
+      def __init__(self, valor=None):
+          self.valor = valor
+          self.siguiente = None
 
-class ListaEnlazada:
-    def __init__(self):
-        self.cabeza = None
+  class ListaEnlazada:
+      def __init__(self):
+          self.cabeza = None
 
-    def agregar(self, valor):
-        nuevo_nodo = Nodo(valor)
-        if self.cabeza is None:
-            self.cabeza = nuevo_nodo
-        else:
-            actual = self.cabeza
-            while actual.siguiente:
-                actual = actual.siguiente
-            actual.siguiente = nuevo_nodo
+      def agregar(self, valor):
+          nuevo_nodo = Nodo(valor)
+          if self.cabeza is None:
+              self.cabeza = nuevo_nodo
+          else:
+              actual = self.cabeza
+              while actual.siguiente:
+                  actual = actual.siguiente
+              actual.siguiente = nuevo_nodo
 
-```
+  ```
 
-### Listas dobles enlazadas
+- ### Listas dobles enlazadas
 
-```py
-class NodoDoble:
-    def __init__(self, valor=None):
-        self.valor = valor
-        self.siguiente = None
-        self.anterior = None
+  ```py
+  class NodoDoble:
+      def __init__(self, valor=None):
+          self.valor = valor
+          self.siguiente = None
+          self.anterior = None
 
-class ListaDobleEnlazada:
-    def __init__(self):
-        self.cabeza = None
-        self.cola = None
+  class ListaDobleEnlazada:
+      def __init__(self):
+          self.cabeza = None
+          self.cola = None
 
-    def agregar(self, valor):
-        nuevo_nodo = NodoDoble(valor)
-        if self.cabeza is None:
-            self.cabeza = nuevo_nodo
-            self.cola = nuevo_nodo
-        else:
-            self.cola.siguiente = nuevo_nodo
-            nuevo_nodo.anterior = self.cola
-            self.cola = nuevo_nodo
+      def agregar(self, valor):
+          nuevo_nodo = NodoDoble(valor)
+          if self.cabeza is None:
+              self.cabeza = nuevo_nodo
+              self.cola = nuevo_nodo
+          else:
+              self.cola.siguiente = nuevo_nodo
+              nuevo_nodo.anterior = self.cola
+              self.cola = nuevo_nodo
 
-```
+  ```
 
-### Listas circulares
+- ### Listas circulares
 
-```py
-class NodoCircular:
-    def __init__(self, valor=None):
-        self.valor = valor
-        self.siguiente = None
+  ```py
+  class NodoCircular:
+      def __init__(self, valor=None):
+          self.valor = valor
+          self.siguiente = None
 
-class ListaCircular:
-    def __init__(self):
-        self.cabeza = None
+  class ListaCircular:
+      def __init__(self):
+          self.cabeza = None
 
-    def agregar(self, valor):
-        nuevo_nodo = NodoCircular(valor)
-        if self.cabeza is None:
-            self.cabeza = nuevo_nodo
-            nuevo_nodo.siguiente = nuevo_nodo
-        else:
-            actual = self.cabeza
-            while actual.siguiente != self.cabeza:
-                actual = actual.siguiente
-            actual.siguiente = nuevo_nodo
-            nuevo_nodo.siguiente = self.cabeza
+      def agregar(self, valor):
+          nuevo_nodo = NodoCircular(valor)
+          if self.cabeza is None:
+              self.cabeza = nuevo_nodo
+              nuevo_nodo.siguiente = nuevo_nodo
+          else:
+              actual = self.cabeza
+              while actual.siguiente != self.cabeza:
+                  actual = actual.siguiente
+              actual.siguiente = nuevo_nodo
+              nuevo_nodo.siguiente = self.cabeza
 
-```
+  ```
 
 ---
 
@@ -242,31 +242,31 @@ class ListaCircular:
 
 Los conjuntos son colecciones desordenadas de elementos únicos.
 
-### Conjunto básico
+- ### Conjunto básico
 
-```py
-conjunto = {1, 2, 3}
-conjunto.add(4)
-print(conjunto)  # {1, 2, 3, 4}
+  ```py
+  conjunto = {1, 2, 3}
+  conjunto.add(4)
+  print(conjunto)  # {1, 2, 3, 4}
 
-s = set([5, 4, 6, 8, 8, 1])
-print(s)       #{1, 4, 5, 6, 8}
+  s = set([5, 4, 6, 8, 8, 1])
+  print(s)       #{1, 4, 5, 6, 8}
 
-```
+  ```
 
-### Operaciones con conjuntos
+- ### Operaciones con conjuntos
 
-```py
-conjunto1 = {1, 2, 3}
-conjunto2 = {3, 4, 5}
-union = conjunto1.union(conjunto2)
-interseccion = conjunto1.intersection(conjunto2)
-diferencia = conjunto1.difference(conjunto2)
-print(union)         # {1, 2, 3, 4, 5}
-print(interseccion)  # {3}
-print(diferencia)    # {1, 2}
+  ```py
+  conjunto1 = {1, 2, 3}
+  conjunto2 = {3, 4, 5}
+  union = conjunto1.union(conjunto2)
+  interseccion = conjunto1.intersection(conjunto2)
+  diferencia = conjunto1.difference(conjunto2)
+  print(union)         # {1, 2, 3, 4, 5}
+  print(interseccion)  # {3}
+  print(diferencia)    # {1, 2}
 
-```
+  ```
 
 ---
 
@@ -274,35 +274,35 @@ print(diferencia)    # {1, 2}
 
 Los árboles son estructuras de datos jerárquicas.
 
-### Árbol binario
+- ### Árbol binario
 
-```py
-class Nodo:
-    def __init__(self, valor):
-        self.valor = valor
-        self.izquierda = None
-        self.derecha = None
+  ```py
+  class Nodo:
+      def __init__(self, valor):
+          self.valor = valor
+          self.izquierda = None
+          self.derecha = None
 
-```
+  ```
 
-### Árbol AVL
+- ### Árbol AVL
 
-```go
-class NodoAVL:
+  ```go
+  class NodoAVL:
   def __init__(self, valor):
       self.valor = valor
       self.izquierda = None
       self.derecha = None
       self.altura = 1
-```
+  ```
 
-### Árbol B
+- ### Árbol B
 
-Un árbol B es un árbol auto-balanceado que mantiene datos ordenados y permite operaciones en tiempo logarítmico.
+  Un árbol B es un árbol auto-balanceado que mantiene datos ordenados y permite operaciones en tiempo logarítmico.
 
-### Árbol rojo-negro
+- ### Árbol rojo-negro
 
-Un árbol rojo-negro es otro tipo de árbol binario auto-balanceado.
+  Un árbol rojo-negro es otro tipo de árbol binario auto-balanceado.
 
 ---
 
@@ -310,10 +310,10 @@ Un árbol rojo-negro es otro tipo de árbol binario auto-balanceado.
 
 Los grafos consisten en nodos y aristas y pueden ser dirigidos o no dirigidos.
 
-### Grafos dirigidos
+- ### Grafos dirigidos
 
-```py
-class GrafoDirigido:
+  ```py
+  class GrafoDirigido:
   def __init__(self):
       self.nodos = {}
 
@@ -325,12 +325,12 @@ class GrafoDirigido:
       if origen in self.nodos:
           self.nodos[origen].append(destino)
 
-```
+  ```
 
-### Grafos no dirigidos
+- ### Grafos no dirigidos
 
-```py
-class GrafoNoDirigido:
+  ```py
+  class GrafoNoDirigido:
   def __init__(self):
       self.nodos = {}
 
@@ -345,7 +345,7 @@ class GrafoNoDirigido:
           self.nodos[nodo2].append(nodo1)
 
 
-```
+  ```
 
 ---
 
@@ -353,56 +353,56 @@ class GrafoNoDirigido:
 
 Los genéricos permiten definir funciones, métodos y clases que operan con distintos tipos de datos sin perder la información de tipo.
 
-### Uso básico de genéricos con TypeVar y Generic
+- ### Uso básico de genéricos con TypeVar y Generic
 
-```py
-from typing import TypeVar, Generic, List
+  ```py
+  from typing import TypeVar, Generic, List
 
-T = TypeVar('T')
+  T = TypeVar('T')
 
-class Caja(Generic[T]):
-    def __init__(self):
-        self.elementos: List[T] = []
+  class Caja(Generic[T]):
+      def __init__(self):
+          self.elementos: List[T] = []
 
-    def agregar(self, elemento: T) -> None:
-        self.elementos.append(elemento)
+      def agregar(self, elemento: T) -> None:
+          self.elementos.append(elemento)
 
-    def obtener(self) -> List[T]:
-        return self.elementos
+      def obtener(self) -> List[T]:
+          return self.elementos
 
-```
+  ```
 
-### Ejemplo de uso con genéricos
+- **Ejemplo de uso con genéricos**
 
-```py
-caja_int = Caja[int]()
-caja_int.agregar(1)
-caja_int.agregar(2)
-print(caja_int.obtener())  # [1, 2]
+  ```py
+  caja_int = Caja[int]()
+  caja_int.agregar(1)
+  caja_int.agregar(2)
+  print(caja_int.obtener())  # [1, 2]
 
-caja_str = Caja[str]()
-caja_str.agregar("hola")
-caja_str.agregar("mundo")
-print(caja_str.obtener())  # ['hola', 'mundo']
+  caja_str = Caja[str]()
+  caja_str.agregar("hola")
+  caja_str.agregar("mundo")
+  print(caja_str.obtener())  # ['hola', 'mundo']
 
-```
+  ```
 
-### Genéricos en funciones
+- ### Genéricos en funciones
 
-```py
-from typing import List, TypeVar
+  ```py
+  from typing import List, TypeVar
 
-T = TypeVar('T')
+  T = TypeVar('T')
 
-def primera_elemento(lista: List[T]) -> T:
-    if not lista:
-        raise ValueError("La lista está vacía")
-    return lista[0]
+  def primera_elemento(lista: List[T]) -> T:
+      if not lista:
+          raise ValueError("La lista está vacía")
+      return lista[0]
 
-print(primera_elemento([1, 2, 3]))    # 1
-print(primera_elemento(['a', 'b']))  # 'a'
+  print(primera_elemento([1, 2, 3]))    # 1
+  print(primera_elemento(['a', 'b']))  # 'a'
 
-```
+  ```
 
 ---
 
@@ -410,22 +410,22 @@ print(primera_elemento(['a', 'b']))  # 'a'
 
 Los frozensets son conjuntos inmutables, lo que significa que no pueden modificarse después de su creación. Son útiles cuando necesitas un conjunto que no cambie y se pueda usar como clave en un diccionario.
 
-### Uso básico de frozensets
+- ### Uso básico de frozensets
 
-```py
-frozenset1 = frozenset([1, 2, 3])
-frozenset2 = frozenset([3, 4, 5])
+  ```py
+  frozenset1 = frozenset([1, 2, 3])
+  frozenset2 = frozenset([3, 4, 5])
 
-# Operaciones con frozensets
-union = frozenset1.union(frozenset2)
-interseccion = frozenset1.intersection(frozenset2)
-diferencia = frozenset1.difference(frozenset2)
+  # Operaciones con frozensets
+  union = frozenset1.union(frozenset2)
+  interseccion = frozenset1.intersection(frozenset2)
+  diferencia = frozenset1.difference(frozenset2)
 
-print(union)         # frozenset({1, 2, 3, 4, 5})
-print(interseccion)  # frozenset({3})
-print(diferencia)    # frozenset({1, 2})
+  print(union)         # frozenset({1, 2, 3, 4, 5})
+  print(interseccion)  # frozenset({3})
+  print(diferencia)    # frozenset({1, 2})
 
-```
+  ```
 
 ---
 
@@ -433,75 +433,75 @@ print(diferencia)    # frozenset({1, 2})
 
 Las colecciones en Python son tipos de datos que agrupan múltiples elementos. Además de las listas, tuplas, diccionarios y conjuntos ya mencionados, Python ofrece varias colecciones adicionales en el módulo collections.
 
-### namedtuple
+- ### namedtuple
 
-namedtuple crea subclases de tuplas con nombres para los campos. Es útil para representar estructuras de datos ligeras.
+  namedtuple crea subclases de tuplas con nombres para los campos. Es útil para representar estructuras de datos ligeras.
 
-```py
-from collections import namedtuple
+  ```py
+  from collections import namedtuple
 
-Persona = namedtuple('Persona', ['nombre', 'edad'])
-p = Persona(nombre='Juan', edad=30)
-print(p.nombre)  # Juan
-print(p.edad)    # 30
+  Persona = namedtuple('Persona', ['nombre', 'edad'])
+  p = Persona(nombre='Juan', edad=30)
+  print(p.nombre)  # Juan
+  print(p.edad)    # 30
 
-```
+  ```
 
-### deque
+- ### deque
 
-deque (double-ended queue) es una cola de doble extremo que permite añadir y eliminar elementos desde ambos extremos de manera eficiente.
+  deque (double-ended queue) es una cola de doble extremo que permite añadir y eliminar elementos desde ambos extremos de manera eficiente.
 
-```py
-from collections import deque
+  ```py
+  from collections import deque
 
-d = deque([1, 2, 3])
-d.append(4)           # Añadir al final
-d.appendleft(0)       # Añadir al principio
-print(d)              # deque([0, 1, 2, 3, 4])
-d.pop()               # Eliminar del final
-d.popleft()           # Eliminar del principio
+  d = deque([1, 2, 3])
+  d.append(4)           # Añadir al final
+  d.appendleft(0)       # Añadir al principio
+  print(d)              # deque([0, 1, 2, 3, 4])
+  d.pop()               # Eliminar del final
+  d.popleft()           # Eliminar del principio
 
-```
+  ```
 
-### Counter
+- ### Counter
 
-Counter es una subclase de dict que cuenta la frecuencia de elementos en un iterable.
+  Counter es una subclase de dict que cuenta la frecuencia de elementos en un iterable.
 
-```py
-from collections import Counter
+  ```py
+  from collections import Counter
 
-c = Counter(['a', 'b', 'a', 'c', 'b', 'a'])
-print(c)              # Counter({'a': 3, 'b': 2, 'c': 1})
-print(c['a'])         # 3
-print(c.most_common(1))  # [('a', 3)]
+  c = Counter(['a', 'b', 'a', 'c', 'b', 'a'])
+  print(c)              # Counter({'a': 3, 'b': 2, 'c': 1})
+  print(c['a'])         # 3
+  print(c.most_common(1))  # [('a', 3)]
 
-```
+  ```
 
-### OrderedDict
+- ### OrderedDict
 
-OrderedDict es una subclase de dict que recuerda el orden en el que se han añadido los elementos.
+  OrderedDict es una subclase de dict que recuerda el orden en el que se han añadido los elementos.
 
-```py
-from collections import OrderedDict
+  ```py
+  from collections import OrderedDict
 
-d = OrderedDict()
-d['a'] = 1
-d['b'] = 2
-d['c'] = 3
-print(d)              # OrderedDict([('a', 1), ('b', 2), ('c', 3)])
+  d = OrderedDict()
+  d['a'] = 1
+  d['b'] = 2
+  d['c'] = 3
+  print(d)              # OrderedDict([('a', 1), ('b', 2), ('c', 3)])
 
-```
+  ```
 
-### defaultdict
+- ### defaultdict
 
-defaultdict es una subclase de dict que proporciona un valor predeterminado para las claves que no existen.
+  defaultdict es una subclase de dict que proporciona un valor predeterminado para las claves que no existen.
 
-```py
-from collections import defaultdict
+  ```py
+  from collections import defaultdict
 
-d = defaultdict(int)  # Valor predeterminado es 0 para enteros
-d['a'] += 1
-d['b'] += 2
-print(d)              # defaultdict(<class 'int'>, {'a': 1, 'b': 2})
+  d = defaultdict(int)  # Valor predeterminado es 0 para enteros
+  d['a'] += 1
+  d['b'] += 2
+  print(d)              # defaultdict(<class 'int'>, {'a': 1, 'b': 2})
 
-```
+  ```
